--- a/translation/dest/class/fa-IR.xml
+++ b/translation/dest/class/fa-IR.xml
@@ -1,98 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="lishogiClasses">Classes</string>
+	<string name="lishogiClasses">کلاس ها</string>
 	<string name="teachClassesOfShogiStudents">Teach classes of shogi students with the Lishogi Classes tool suite.</string>
-	<string name="features">Features</string>
-	<string name="quicklyGenerateSafeUsernames">Quickly generate safe usernames and passwords for students</string>
-	<string name="trackStudentProgress">Track student progress in games and puzzles</string>
-	<string name="messageAllStudents">Message all students about new class material</string>
-	<string name="freeForAllForever">100% free for all, forever, with no ads or trackers</string>
-	<string name="applyToBeLishogiTeacher">Apply to be a Lishogi Teacher</string>
-	<string name="noClassesYet">No classes yet.</string>
-	<string name="teachersX">Teachers: %s</string>
-	<string name="newClass">New class</string>
-	<string name="closeClass">Close class</string>
+	<string name="features">امکانات</string>
+	<string name="quicklyGenerateSafeUsernames">برای دانش آموزان خود سریعا نام کاربری و رمز عبور امن بسازید</string>
+	<string name="trackStudentProgress">پیشرفت دانش آموزان را در پازل ها و بازی ها مشاهده کنید</string>
+	<string name="messageAllStudents">به تمام دانش آموزان درباره شرایط جدید کلاس پیام دهید</string>
+	<string name="freeForAllForever">صد درصد رایگان برای همه و بدون تبلیغات</string>
+	<string name="applyToBeLishogiTeacher">برای آنکه معلمِ Lishogi باشید درخواست بدهید</string>
+	<string name="noClassesYet">هنوز کلاسی موجود نیست.</string>
+	<string name="teachersX">معلم‌ها: %s</string>
+	<string name="newClass">کلاس جدید</string>
+	<string name="closeClass">کلاس را ببندید</string>
 	<string name="closedByX">Closed by %s</string>
-	<string name="reopen">Reopen</string>
-	<string name="removeStudent">Remove student</string>
-	<string name="removedStudents">Removed</string>
-	<string name="inviteTheStudentBack">Invite the student back</string>
-	<string name="sendAMessage">Send a message to all students.</string>
-	<string name="aLinkToTheClassWillBeAdded">A link to the class will be automatically added at the end of the message, so you don\'t need to include it yourself.</string>
-	<string name="className">Class name</string>
-	<string name="classDescription">Class description</string>
-	<string name="visibleByBothStudentsAndTeachers">Visible by both teachers and students of the class</string>
-	<string name="teachersOfTheClass">Teachers of the class</string>
-	<string name="addLishogiUsernames">Add Lishogi usernames to invite them as teachers. One per line.</string>
+	<string name="reopen">بازگشایی</string>
+	<string name="removeStudent">دانش‌جو را خارج کنید</string>
+	<string name="removedStudents">حذف شده</string>
+	<string name="inviteTheStudentBack">دانش‌جو را برای بازگشت دعوت کنید</string>
+	<string name="sendAMessage">یک پیام به همه دانش‌جویان ارسال نمایید.</string>
+	<string name="aLinkToTheClassWillBeAdded">یک لینک به کلاس به طور خودکار به انتهای پیام شما اضافه خواهد شد. پس شما نیازی ندارید که خودتان لینک را درج کنید.</string>
+	<string name="className">نام کلاس</string>
+	<string name="classDescription">توصیف کلاس</string>
+	<string name="visibleByBothStudentsAndTeachers">قابل مشاهده برای دانش آموزان و معلم این کلاس</string>
+	<string name="teachersOfTheClass">معلمهای کلاس</string>
+	<string name="addLishogiUsernames">نام کاربری های lishogi را وارد کنید تا آنها را به عنوان معلم دعوت کنید. هر خط یک نام کاربری.</string>
 	<string name="theyMustFirstApply">They must first apply to be Lishogi Teachers.</string>
-	<string name="resetPassword">Reset password</string>
-	<string name="makeSureToCopy">Make sure to copy or write down the password now. You won’t be able to see it again!</string>
-	<string name="passwordX">Password: %s</string>
-	<string name="generateANewPassword">Generate a new password for the student</string>
-	<string name="invitedToXByY">Invited to %1$s by %2$s</string>
-	<string name="realName">Real name</string>
-	<string name="privateWillNeverBeShown">Private. Will never be shown outside the class. Helps remember who the student is.</string>
-	<string name="addStudent">Add student</string>
-	<string name="lishogiProfileXCreatedForY">Lishogi profile %1$s created for %2$s.</string>
-	<string name="studentCredentials">Student:  %1$s
-Username: %2$s
-Password: %3$s</string>
-	<string name="inviteALishogiAccount">Invite a Lishogi account</string>
-	<string name="inviteDesc1">If the student already has a Lishogi account, you can invite them to the class.</string>
-	<string name="inviteDesc2">They will receive a message on Lishogi with a link to join the class.</string>
-	<string name="inviteDesc3">Important: only invite students you know, and who actively want to join the class.</string>
-	<string name="inviteDesc4">Never send unsolicited invites to arbitrary players.</string>
-	<string name="createANewLishogiAccount">Create a new Lishogi account</string>
-	<string name="createDesc1">If the student doesn\'t have a Lishogi account yet, you can create one for them here.</string>
-	<string name="createDesc2">No email address is required. A password will be generated, and you will have to transmit it to the student, so they can log in.</string>
-	<string name="createDesc3">Important: a student must not have multiple accounts.</string>
-	<string name="createDesc4">If they already have one, use the invite form instead.</string>
-	<string name="lishogiUsername">Lishogi username</string>
-	<string name="generateANewUsername">Generate a new username</string>
-	<string name="welcomeToClass">Welcome to your class: %s.
-Here is the link to access the class.</string>
-	<string name="invitationToClass">You are invited to join the class \"%s\" as a student.</string>
-	<string name="clickToViewInvitation">Click the link to view the invitation:</string>
+	<string name="resetPassword">بازنشانی گذرواژه</string>
+	<string name="makeSureToCopy">مطمئن شوید که رمز عبور را copy می کنید یا آن را می نویسید. شما دیگر این رمز عبور را نخواهید دید!</string>
+	<string name="passwordX">گذرواژه: %s</string>
+	<string name="generateANewPassword">یک گذرواژه جدید برای دانشجو تولید کنید</string>
+	<string name="invitedToXByY">توسط %2$s به %1$s دعوت شد</string>
+	<string name="realName">نام واقعی</string>
+	<string name="privateWillNeverBeShown">خصوصی. هرگز در خارج از کلاس نمایش داده نخواهد شد. به یاد آوری دانش آموز کمک می کند.</string>
+	<string name="addStudent">دانش‌آموز اضافه کنید</string>
+	<string name="lishogiProfileXCreatedForY">حساب کاربری %1$s برای %2$s ساخته شد.</string>
+	<string name="studentCredentials">دانش‌جو: %1$s
+نامِ کاربری: %2$s
+گذرواژه: %3$s</string>
+	<string name="inviteALishogiAccount">یک اکانت Lishogi را دعوت کنید</string>
+	<string name="inviteDesc1">اگر دانش آموز هم اکنون دارای یک حساب در lishogi می باشد، شما می توانید او را به کلاس دعوت کنید.</string>
+	<string name="inviteDesc2">آنها یک پیام در lishogi حاوی یک لینک برای ورود به کلاس دریافت خواهند کرد.</string>
+	<string name="inviteDesc3">مهم: فقط دانش آموزانی که میشناسید و میخواهند وارد کلاس بشوند را دعوت کنید.</string>
+	<string name="inviteDesc4">هرگز دعوت‌های ناخواسته را برای بازیکنان دلخواه ارسال نکنید.</string>
+	<string name="createANewLishogiAccount">ساخت یک حساب جدید در lishogi</string>
+	<string name="createDesc1">اگر دانش آموز هنوز حساب lishogi ندارد، شما می توانید از اینجا برای او حساب درست کنید.</string>
+	<string name="createDesc2">هیچ آدرس ایمیلی نیاز نیست. یک رمز عبور ساخته خواهد شد و شما باید آن را به دانش آموز انتقال بدهید تا بتواند وارد شود.</string>
+	<string name="createDesc3">مهم: یک دانش‌جو نباید حسابهای کاربری متعدد داشته باشد.</string>
+	<string name="createDesc4">اگر قبلاً یکی دارند، به جای آن از فرم دعوت استفاده کنید.</string>
+	<string name="lishogiUsername">نام کاربریِ Lishogi</string>
+	<string name="generateANewUsername">یک نام کاربری جدید تولید کنید</string>
+	<string name="welcomeToClass">به کلاس %s خوش آمدید.
+این لینک برای ورود به کلاس است.</string>
+	<string name="invitationToClass">شما به کلاس %s به عنوان دانش آموز دعوت شده اید.</string>
+	<string name="clickToViewInvitation">برای مشاهده دعوت‌نامه، روی پیوند کلیک کنید:</string>
 	<plurals name="nbPendingInvitations">
-		<item quantity="one">One pending invitation</item>
-		<item quantity="other">%s pending invitations</item>
+		<item quantity="one">یک دعوت‌نامه منتظر پاسخ</item>
+		<item quantity="other">%s دعوت‌نامه منتظر پاسخ</item>
 	</plurals>
 	<string name="noPendingInvitations">No pending invitations</string>
-	<string name="onlyVisibleToTeachers">Only visible to the class teachers</string>
-	<string name="lastActiveDate">Active</string>
-	<string name="managed">Managed</string>
-	<string name="thisStudentAccountIsManaged">This student account is managed</string>
-	<string name="upgradeFromManaged">Upgrade from managed to autonomous</string>
-	<string name="release">Release</string>
-	<string name="releaseTheAccount">Release the account so the student can manage it autonomously.</string>
-	<string name="releaseDesc1">A released account cannot be made managed again. The student will be able to toggle kid mode and reset password themselves.</string>
-	<string name="releaseDesc2">The student will remain in the class after their account is released.</string>
-	<string name="realUniqueEmail">Real, unique email address of the student. We will send a confirmation email to it, with a link to release the account.</string>
-	<string name="teachers">Teachers</string>
+	<string name="onlyVisibleToTeachers">قابل مشاهده فقط برای معلم‌های کلاس</string>
+	<string name="lastActiveDate">فعال</string>
+	<string name="managed">دسترسی کاربری مدیریت‌شده</string>
+	<string name="thisStudentAccountIsManaged">حساب کاربری این دانشجو توسط معلم مدیریت و ایجاد شده است</string>
+	<string name="upgradeFromManaged">ارتقاء از مدیریت شده به خودمختار</string>
+	<string name="release">حساب کاربری تبدیل شده به حساب اصلی</string>
+	<string name="releaseTheAccount">حساب را فارغ التحصیل کنید تا دانش آموز بتواند به صورت مستقل آن را مدیریت کند.</string>
+	<string name="releaseDesc1">یک حساب فارغ التحصیل شده را نمی توان دوباره مدیریت کرد. دانش‌آموز می‌تواند حالت کودک را ببندد و رمز عبور خود را عوض کند.</string>
+	<string name="releaseDesc2">دانش آموز پس از فارغ التحصیلی حساب خود در کلاس باقی می ماند.</string>
+	<string name="realUniqueEmail">آدرس ایمیل واقعی و منحصر به فرد دانش آموز. ما یک ایمیل تأیید برای آن ارسال خواهیم کرد، همراه با پیوندی برای تکمیل حساب.</string>
+	<string name="teachers">معلم‌ها</string>
 	<plurals name="nbTeachers">
-		<item quantity="one">Teacher</item>
-		<item quantity="other">%s teachers</item>
+		<item quantity="one">معلم</item>
+		<item quantity="other">%s معلم</item>
 	</plurals>
 	<plurals name="nbStudents">
-		<item quantity="one">Student</item>
-		<item quantity="other">%s students</item>
+		<item quantity="one">دانشجو</item>
+		<item quantity="other">%s دانشجو</item>
 	</plurals>
-	<string name="students">Students</string>
-	<string name="progress">Progress</string>
-	<string name="noStudents">No students in the class, yet.</string>
-	<string name="noRemovedStudents">No removed students.</string>
-	<string name="overDays">Over days</string>
-	<string name="timePlaying">Time playing</string>
-	<string name="variantXOverLastY">%1$s over last %2$s</string>
-	<string name="winrate">Win rate</string>
-	<string name="na">N/A</string>
-	<string name="news">Class news</string>
-	<string name="editNews">Edit news</string>
-	<string name="notifyAllStudents">Notify all students</string>
-	<string name="nothingHere">Nothing here, yet.</string>
-	<string name="newsEdit1">All class news in a single field.</string>
-	<string name="newsEdit2">Add the recent news at the top. Don\'t delete previous news.</string>
-	<string name="newsEdit3">Separate news with ---
-It will display a horizontal line.</string>
+	<string name="students">دانشجویان</string>
+	<string name="progress">پیشرفت</string>
+	<string name="noStudents">هنوز، هیچ دانشجویی در کلاس نیست.</string>
+	<string name="noRemovedStudents">هیچ دانشجویی اخراج نشده است.</string>
+	<string name="overDays">تعداد روزها</string>
+	<string name="timePlaying">زمان بازی کردن</string>
+	<string name="variantXOverLastY">%1$s در %2$s روز اخیر</string>
+	<string name="winrate">نرخِ برد</string>
+	<string name="na">در دسترس نیست</string>
+	<string name="news">اخبار</string>
+	<string name="editNews">خبرها را ویرایش نمایید</string>
+	<string name="notifyAllStudents">اطلاع دادن به تمام دانش آموزان</string>
+	<string name="nothingHere">اینجا هنوز چیزی نیست.</string>
+	<string name="newsEdit1">همه اخبار کلاس در جایی واحد.</string>
+	<string name="newsEdit2">اخبار جدید را بالا بگذار. اخبار قبلی را پاک نکن.</string>
+	<string name="newsEdit3">اخبار جداگانه با ---
+یک خط افقی را نمایش می دهد.</string>
 	<string name="markdownAvailable">%s is available for more advanced syntax.</string>
 </resources>
