--- a/translation/dest/patron/fa-IR.xml
+++ b/translation/dest/patron/fa-IR.xml
@@ -1,73 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="donate">Donate</string>
-	<string name="lishogiPatron">Lishogi Patron</string>
-	<string name="freeAccount">Free account</string>
-	<string name="becomePatron">Become a Lishogi Patron</string>
-	<string name="xBecamePatron">%s became a Lishogi Patron</string>
-	<string name="newPatrons">New Patrons</string>
+	<string name="donate">کمک مالی</string>
+	<string name="lishogiPatron">پشتیبانِ Lishogi</string>
+	<string name="freeAccount">حساب کاربری رایگان</string>
+	<string name="becomePatron">پشتیبانِ Lishogi بشوید</string>
+	<string name="xBecamePatron">%s پشتیبانِ Lishogi شد</string>
+	<string name="newPatrons">پشتیبانهای جدید</string>
 	<string name="freeShogi">Free shogi for everyone, forever!</string>
-	<string name="noAdsNoSubs">No ads, no subscriptions; but open-source and passion.</string>
-	<string name="thankYou">Thank you for your donation!</string>
-	<string name="youHaveLifetime">You have a Lifetime Patron account. That\'s pretty awesome!</string>
-	<string name="patronUntil">You have a Patron account until %s.</string>
+	<string name="noAdsNoSubs">بدون تبلیغات، بدون اشتراکها، فقط متن‌باز و لذت‌بخش.</string>
+	<string name="thankYou">از کمک مالی شما سپاسگزاریم!</string>
+	<string name="youHaveLifetime">شما دارای یک حساب پشنیبان مادام‌العمر هستید. واقعاً خیلی عالی است!</string>
+	<string name="patronUntil">شما دارای یک حساب پشتیبان تا %s هستید.</string>
 	<string name="ifNotRenewed">If not renewed, you will then be downgraded to free.</string>
-	<string name="weRelyOnSupport">We rely on support from people like you to make it possible. If you enjoy using Lishogi, please consider supporting us by donating and becoming a Patron!</string>
+	<string name="weRelyOnSupport">ما بر روی کمک از سوی کسانی چون شما برای تحقق آن تکیه می‌کنیم. اگر از استفاده از Lishogi لذت می‌برید، لطفاً با کمک مالی و پشتیبان شدن، ما را یاری برسانید!</string>
 	<string name="donationSupport">If you want to support Lishogi and open source development, consider donating! You will not get anything in return, because Lishogi treats all users equally, but your donation will be very appreciated!</string>
-	<string name="lifetime">Lifetime</string>
-	<string name="payLifetimeOnce">Pay %s once. Be a Lishogi Patron forever!</string>
-	<string name="lifetimePatron">Lifetime Lishogi Patron</string>
+	<string name="lifetime">مادام‌العمر</string>
+	<string name="payLifetimeOnce">یکبار %s بپردازید. برای همیشه پشتیبانِ Lishogi باشید!</string>
+	<string name="lifetimePatron">پشتیبانِ مادام‌العمرِ Lishogi</string>
 	<string name="makeExtraDonation">Make an extra donation?</string>
-	<string name="monthly">Monthly</string>
-	<string name="recurringBilling">Recurring billing, renewing your Patron wings every month.</string>
-	<string name="onetime">One-time</string>
-	<string name="singleDonation">A single donation that grants you the Patron wings for one month.</string>
-	<string name="otherAmount">Other</string>
+	<string name="monthly">ماهانه</string>
+	<string name="recurringBilling">تکرارِ صورت‌حساب، تجدیدِ بالهای پشتیبانِ شما در هر ماه.</string>
+	<string name="onetime">یک بار</string>
+	<string name="singleDonation">یک کمک مالی که به شما بالهای پشتیبان را برای یک ماه اعطا می‌کند.</string>
+	<string name="otherAmount">دیگر</string>
 	<string name="pleaseEnterAmount">Please enter an amount in USD</string>
-	<string name="withCreditCard">Credit Card</string>
+	<string name="withCreditCard">کارت اعتباری</string>
 	<string name="withPaypal">PayPal</string>
-	<string name="weAreSmallTeam">We are a small team, so your support makes a huge difference!</string>
-	<string name="celebratedPatrons">The celebrated Patrons who make Lishogi possible</string>
-	<string name="whereMoneyGoes">Where does the money go?</string>
-	<string name="costBreakdown">See the detailed cost breakdown</string>
-	<string name="changeMonthlySupport">Can I change/cancel my monthly support?</string>
-	<string name="changeOrContact">Yes, at any time, from this page.
-Or you can %s.</string>
-	<string name="contactSupport">contact Lishogi support</string>
-	<string name="otherMethods">Other methods of donation?</string>
-	<string name="bankTransfers">We also accept bank transfers</string>
+	<string name="weAreSmallTeam">ما یک تیم کوچک هستیم، بنابراین پشتیبانی شما تغییر بزرگی ایجاد می‌کند!</string>
+	<string name="celebratedPatrons">پشتبان‌های ارجمند که Lishogi را ممکن می‌سازند</string>
+	<string name="whereMoneyGoes">پول به کجا می‌رود؟</string>
+	<string name="costBreakdown">جزئیات ساختار مخارج را مشاهده نمایید</string>
+	<string name="changeMonthlySupport">آیا می‌توانم پشتیبانی ماهانه خود را تغییر یا حذف نمایم؟</string>
+	<string name="changeOrContact">بله، هر لحظه، از این صفحه. 
+یا شما می‌توانید %s.</string>
+	<string name="contactSupport">با پشتیبانیِ Lishogi تماس بگیرید</string>
+	<string name="otherMethods">روشهای دیگر برای کمک مالی؟</string>
+	<string name="bankTransfers">ما انتقالهای بانکی را هم قبول می‌کنیم</string>
 	<string name="bitcoin">And here\'s our bitcoin address: %s</string>
-	<string name="patronFeatures">Are some features reserved to Patrons?</string>
-	<string name="noPatronFeatures">No, because Lishogi is entirely free, forever, and for everyone. That\'s a promise.
-However, Patrons get bragging rights with a cool new profile icon.</string>
-	<string name="featuresComparison">See the detailed feature comparison</string>
+	<string name="patronFeatures">آیا برخی ویژگیها فقط برای پشتیبان‌ها قابل دسترس است؟</string>
+	<string name="noPatronFeatures">نه، چرا که Lishogi کاملاً رایگان است، برای همیشه، و برای همه. این یک تعهد و قول است.
+با این حال، پشتیبان‌ها با یک آیکون کاربری جدید و زیبا، حقوقی برای فخرفروشی و پز دادن دریافت می‌کنند.</string>
+	<string name="featuresComparison">مقایسه جزئیاتِ ویژگیها را مشاهده کنید</string>
 	<plurals name="patronForMonths">
-		<item quantity="one">Lishogi Patron for one month</item>
-		<item quantity="other">Lishogi Patron for %s months</item>
+		<item quantity="one">پشتیبانِ Lishogi برای یک ماه</item>
+		<item quantity="other">پشتیبانِ Lishogi برای %s ماه</item>
 	</plurals>
-	<string name="youSupportWith">You support lishogi.org with %s per month.</string>
-	<string name="tyvm">Thank you very much for your help. You rock!</string>
-	<string name="currentStatus">Current status</string>
-	<string name="nextPayment">Next payment</string>
-	<string name="youWillBeChargedXOnY">You will be charged %1$s on %2$s.</string>
-	<string name="makeAdditionalDonation">Make an additional donation now</string>
-	<string name="update">Update</string>
-	<string name="changeMonthlyAmount">Change the monthly amount (%s)</string>
-	<string name="cancelSupport">cancel your support</string>
-	<string name="xOrY">%1$s or %2$s</string>
-	<string name="decideHowMuch">Decide what Lishogi is worth to you:</string>
-	<string name="stopPayments">Withdraw your credit card and stop payments:</string>
-	<string name="noLongerSupport">No longer support Lishogi</string>
+	<string name="youSupportWith">شما با %s در هر ماه Lishogi را پشتیبانی می‌کنید.</string>
+	<string name="tyvm">از کمک شما بسیار سپاسگزاریم. شما تاثیرگذارید!</string>
+	<string name="currentStatus">وضعیت کنونی</string>
+	<string name="nextPayment">پرداخت بعدی</string>
+	<string name="youWillBeChargedXOnY">برای شما در تاریخ %2$s به مقدار %1$s بدهکاری ثبت خواهد شد.</string>
+	<string name="makeAdditionalDonation">یک کمک مالی اضافه انجام دهید</string>
+	<string name="update">به روز رسانی</string>
+	<string name="changeMonthlyAmount">مقدار ماهانه (%s) را تغییر دهید</string>
+	<string name="cancelSupport">پشتیبانی خود را متوقف کنید</string>
+	<string name="xOrY">%1$s یا %2$s</string>
+	<string name="decideHowMuch">تصمیم بگیرید که Lishogi چه میزان برای شما ارزش دارد:</string>
+	<string name="stopPayments">کارت اعتباری خود را خارج و پرداختها را متوقف نمایید:</string>
+	<string name="noLongerSupport">بیش از این Lishogi را پشتیبانی نکنید</string>
 	<string name="paymentHistory">Payment history</string>
 	<string name="paid">Paid</string>
-	<string name="viewOthers">View other Lishogi Patrons</string>
-	<string name="date">Date</string>
-	<string name="amount">Amount</string>
-	<string name="transactionCompleted">Your transaction has been completed, and a receipt for your donation has been emailed to you.</string>
-	<string name="permanentPatron">You now have a permanent Patron account.</string>
-	<string name="checkOutProfile">Check out your profile page!</string>
-	<string name="nowLifetime">You are now a lifetime Lishogi Patron!</string>
-	<string name="nowOneMonth">You are now a Lishogi Patron for one month!</string>
-	<string name="downgradeNextMonth">In one month, you will NOT be charged again, and your Lishogi account will revert to a regular account.</string>
+	<string name="viewOthers">پشتیبانهای دیگرِ Lishogi را ببینید</string>
+	<string name="date">تاریخ</string>
+	<string name="amount">مقدار</string>
+	<string name="transactionCompleted">تراکنشِ شما تکمیل شد، و یک رسید برای کمک مالی شما برایتان ایمیل شد.</string>
+	<string name="permanentPatron">شما هم‌اکنون یک حساب دائمی پشتیبان دارید.</string>
+	<string name="checkOutProfile">صفحه کاربری خود را بررسی کنید!</string>
+	<string name="nowLifetime">شما هم‌اکنون یک پشتیبانِ مادام‌العمرِ Lishogi هستید!</string>
+	<string name="nowOneMonth">شما هم‌اکنون برای یک ماه یک پشتیبانِ Lishogi هستید!</string>
+	<string name="downgradeNextMonth">طی یک ماه، دوباره برای شما بدهکاری ثبت نخواهد شد، و حساب کاربری Lishogi شما به یک حساب کاربری معمولی برگردانده خواهد شد.</string>
 	<string name="donationPolicy">Donation policy</string>
 </resources>
