--- a/translation/dest/perfStat/fa-IR.xml
+++ b/translation/dest/perfStat/fa-IR.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="perfStats">%s stats</string>
-  <string name="viewTheGames">View the games</string>
-  <string name="provisional">provisional</string>
-  <string name="notEnoughRatedGames">Not enough rated games have been played to establish a reliable rating.</string>
-  <string name="progressOverLastXGames">Progression over the last %s games:</string>
-  <string name="ratingDeviation">Rating deviation: %s.</string>
+  <string name="perfStats">وضعیت %s</string>
+  <string name="viewTheGames">بازی ها را تماشا کنید</string>
+  <string name="provisional">موقت</string>
+  <string name="notEnoughRatedGames">بازی های دارای امتیاز کافی برای ایجاد رتبه بندی قابل اعتماد انجام نشده است.</string>
+  <string name="progressOverLastXGames">پیشرفت در آخرین %s بازی ها:</string>
+  <string name="ratingDeviation">انحراف از معیارِ امتیازات: %s.</string>
   <string name="ratingDeviationHelp">Lower value means the rating is more stable. Above %s, the rating is considered provisional.</string>
-  <string name="totalGames">Total games</string>
-  <string name="ratedGames">Rated games</string>
-  <string name="tournamentGames">Tournament games</string>
-  <string name="berserkedGames">Berserked games</string>
-  <string name="timeSpentPlaying">Time spent playing</string>
-  <string name="averageOpponent">Average opponent</string>
-  <string name="victories">Victories</string>
-  <string name="defeats">Defeats</string>
-  <string name="disconnections">Disconnections</string>
-  <string name="notEnoughGames">Not enough games played</string>
-  <string name="highestRating">Highest rating: %s</string>
-  <string name="lowestRating">Lowest rating: %s</string>
-  <string name="fromXToY">from %1$s to %2$s</string>
-  <string name="winningStreak">Winning streak</string>
-  <string name="losingStreak">Losing streak</string>
-  <string name="longestStreak">Longest streak: %s</string>
-  <string name="currentStreak">Current streak: %s</string>
-  <string name="bestRated">Best rated victories</string>
-  <string name="worstRated">Worst rated defeats</string>
-  <string name="gamesInARow">Games played in a row</string>
-  <string name="lessThanOneHour">Less than one hour between games</string>
-  <string name="maxTimePlaying">Max time spent playing</string>
-  <string name="now">now</string>
+  <string name="totalGames">تمام بازی ها</string>
+  <string name="ratedGames">بازی های رسمی</string>
+  <string name="tournamentGames">بازی های مسابقه ای</string>
+  <string name="berserkedGames">بازی های برزکی</string>
+  <string name="timeSpentPlaying">مدت زمان بازی کردن</string>
+  <string name="averageOpponent">حریف معمولی</string>
+  <string name="victories">پیروزی ها</string>
+  <string name="defeats">شکست ها</string>
+  <string name="disconnections">قطع ارتباطها</string>
+  <string name="notEnoughGames">تعداد بازی های انجام شده کافی نیست</string>
+  <string name="highestRating">بالاترین امتیاز: %s</string>
+  <string name="lowestRating">پایین‌ترین امتیاز: %s</string>
+  <string name="fromXToY">از %1$s تا %2$s</string>
+  <string name="winningStreak">بردهای متوالی</string>
+  <string name="losingStreak">باخت‌های متوالی</string>
+  <string name="longestStreak">طولانی‌ترین توالی: %s</string>
+  <string name="currentStreak">استمرار فعلی: %s</string>
+  <string name="bestRated">بهترین پیروزی های رسمی</string>
+  <string name="worstRated">بدترین باخت های رسمی</string>
+  <string name="gamesInARow">بازی های متوالی انجام شده</string>
+  <string name="lessThanOneHour">کمتر از یک ساعت بین بازی‌ها</string>
+  <string name="maxTimePlaying">بیشترین زمانی که صرف بازی شده است</string>
+  <string name="now">حالا</string>
 </resources>
