--- a/translation/dest/preferences/fa-IR.xml
+++ b/translation/dest/preferences/fa-IR.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="preferences">Preferences</string>
+	<string name="preferences">تنظیمات عملکرد</string>
 	<string name="gameDisplay">Game display</string>
 	<string name="boardLayout">Board layout</string>
 	<string name="clearHands">Hide ghosts of pieces in hand</string>
-	<string name="pieceAnimation">Piece animation</string>
-	<string name="materialDifference">Material difference</string>
+	<string name="pieceAnimation">حرکت مهره ها</string>
+	<string name="materialDifference">تفاوت مهره ها</string>
 	<string name="boardHighlightsLastDests">Board highlights - last move/drop</string>
 	<string name="boardHighlightsCheck">Board highlights - check</string>
-	<string name="pieceDestinations">Piece destinations (valid moves and premoves)</string>
+	<string name="pieceDestinations">مقصد مهره(حرکت معتبر و پیش حرکت )</string>
 	<string name="dropDestinations">Drop destinations (valid drops and predrops)</string>
-	<string name="boardCoordinates">Board coordinates</string>
-	<string name="moveListWhilePlaying">Move list while playing</string>
+	<string name="boardCoordinates">مختصات صفحه(A-H، 1-8)</string>
+	<string name="moveListWhilePlaying">لیست حرکات هنگام بازی کردن</string>
 	<string name="colorName">Name used for individual players</string>
 	<string name="displayTouchSquareOverlay">Square highlight overlay on touch devices</string>
-	<string name="zenMode">Zen mode</string>
-	<string name="displayBoardResizeHandle">Show board resize handle</string>
-	<string name="onlyOnInitialPosition">Only on initial position</string>
+	<string name="zenMode">حالت ذن</string>
+	<string name="displayBoardResizeHandle">نمایش دستگیره برای تغییر اندازه صفحه</string>
+	<string name="onlyOnInitialPosition">فقط در آغاز بازی</string>
 	<string name="blindfoldShogi">Blindfold shogi (invisible pieces)</string>
 	<string name="shogiClock">Shogi clock</string>
-	<string name="tenthsOfSeconds">Tenths of seconds</string>
-	<string name="whenTimeRemainingLessThanTenSeconds">When time remaining &lt; 10 seconds</string>
+	<string name="tenthsOfSeconds">دهم ثانیه</string>
+	<string name="whenTimeRemainingLessThanTenSeconds">وقتی زمان باقی مانده کمتر از ده ثانیه می باشد</string>
 	<string name="clockTickingStart">Clock should start ticking at</string>
-	<string name="soundWhenTimeGetsCritical">Sound when time gets critical</string>
-	<string name="giveMoreTime">Give more time</string>
-	<string name="gameBehavior">Game behaviour</string>
-	<string name="howDoYouMovePieces">How do you move pieces?</string>
-	<string name="clickTwoSquares">Click two squares</string>
-	<string name="dragPiece">Drag a piece</string>
-	<string name="bothClicksAndDrag">Either</string>
-	<string name="premovesPlayingDuringOpponentTurn">Premoves (playing during opponent turn)</string>
-	<string name="takebacksWithOpponentApproval">Takebacks (with opponent approval)</string>
-	<string name="inCasualGamesOnly">In casual games only</string>
-	<string name="whenPremoving">When premoving</string>
-	<string name="whenTimeRemainingLessThanThirtySeconds">When time remaining &lt; 30 seconds</string>
-	<string name="moveConfirmation">Move confirmation</string>
-	<string name="inCorrespondenceGames">Correspondence games</string>
-	<string name="correspondenceAndUnlimited">Correspondence and unlimited</string>
-	<string name="confirmResignationAndDrawOffers">Confirm resignation and draw offers</string>
-	<string name="inputMovesWithTheKeyboard">Input moves with the keyboard</string>
-	<string name="scrollOnTheBoardToReplayMoves">Scroll on the board to replay moves</string>
+	<string name="soundWhenTimeGetsCritical">صدا در هنگام زمان بحرانی زده می شود</string>
+	<string name="giveMoreTime">افزایش زمان حریف</string>
+	<string name="gameBehavior">تنظیمات بازی</string>
+	<string name="howDoYouMovePieces">تمایل دارید که چگونه مهره ها را حرکت دهید؟</string>
+	<string name="clickTwoSquares">انتخاب دو مربع مبدا و مقصد</string>
+	<string name="dragPiece">کشیدن یک مهره</string>
+	<string name="bothClicksAndDrag">هر دو</string>
+	<string name="premovesPlayingDuringOpponentTurn">پیش حرکت (بازی در نوبت حریف)</string>
+	<string name="takebacksWithOpponentApproval">پس گرفتن حرکت (با تایید حریف)</string>
+	<string name="inCasualGamesOnly">در بازی های غیررسمی</string>
+	<string name="whenPremoving">در زمان پیش حرکت</string>
+	<string name="whenTimeRemainingLessThanThirtySeconds">وقتی زمان باقی مانده کمتر از سی ثانیه است</string>
+	<string name="moveConfirmation">تایید حرکت</string>
+	<string name="inCorrespondenceGames">در حال بازی مکاتبه ای</string>
+	<string name="correspondenceAndUnlimited">مکاتبه ای و نامحدود</string>
+	<string name="confirmResignationAndDrawOffers">نیاز به تایید دوباره؛ زمانی که تسلیم می شوید یا پیشنهاد تساوی می دهید</string>
+	<string name="inputMovesWithTheKeyboard">ورود حرکات با استفاده از صفحه کلید</string>
+	<string name="scrollOnTheBoardToReplayMoves">اسکرول کردن روی صفحه برای مشاهده مجدد حرکت‌ها</string>
 	<string name="westernNotation">Western notation</string>
 	<string name="japaneseNotation">Japanese notatation</string>
 	<string name="kitaoKawasakiNotation">Kitao-Kawasaki notation</string>
 	<string name="kifNotation">Kif notation</string>
-	<string name="yourPreferencesHaveBeenSaved">Your preferences have been saved.</string>
+	<string name="yourPreferencesHaveBeenSaved">تغییرات شما ذخیره شده است</string>
 </resources>
