--- a/translation/dest/puzzleTheme/fa-IR.xml
+++ b/translation/dest/puzzleTheme/fa-IR.xml
@@ -1,63 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="advantage">Advantage</string>
-  <string name="advantageDescription">Seize your chance to get a decisive advantage.</string>
-  <string name="castling">Castling</string>
-  <string name="castlingDescription">Bring the king to safety.</string>
-  <string name="crushing">Crushing</string>
-  <string name="crushingDescription">Spot the opponent blunder to obtain a crushing advantage.</string>
-  <string name="equality">Equality</string>
-  <string name="equalityDescription">Come back from a losing position, and secure a draw or a balanced position.</string>
-  <string name="defensiveMove">Defensive move</string>
-  <string name="defensiveMoveDescription">A precise move or sequence of moves that is needed to avoid losing material or another advantage.</string>
-  <string name="deflection">Deflection</string>
-  <string name="deflectionDescription">A move that distracts an opponent piece from another duty that it performs, such as guarding a key square. Sometimes also called \"overloading\".</string>
-  <string name="discoveredAttack">Discovered attack</string>
-  <string name="discoveredAttackDescription">Moving a piece (such as a knight), that previously blocked an attack by a long range piece (such as a rook), out of the way of that piece.</string>
-  <string name="doubleCheck">Double check</string>
-  <string name="doubleCheckDescription">Checking with two pieces at once, as a result of a discovered attack where both the moving piece and the unveiled piece attack the opponent\'s king.</string>
-  <string name="endgame">Endgame</string>
-  <string name="endgameDescription">A tactic during the last phase of the game.</string>
-  <string name="fork">Fork</string>
-  <string name="forkDescription">A move where the moved piece attacks two opponent pieces at once.</string>
-  <string name="hangingPiece">Hanging piece</string>
-  <string name="hangingPieceDescription">A tactic involving an opponent piece being undefended or insufficiently defended and free to capture.</string>
-  <string name="long">Long puzzle</string>
-  <string name="longDescription">Five moves to win.</string>
-  <string name="mate">Mate</string>
-  <string name="mateDescription">Win the game with style.</string>
-  <string name="mateIn1">Mate in 1</string>
-  <string name="mateIn1Description">Deliver checkmate in one move.</string>
-  <string name="mateIn2">Mate in 2</string>
-  <string name="mateIn2Description">Deliver checkmate in two moves.</string>
-  <string name="mateIn3">Mate in 3</string>
-  <string name="mateIn3Description">Deliver checkmate in three moves.</string>
-  <string name="mateIn4">Mate in 4</string>
-  <string name="mateIn4Description">Deliver checkmate in four moves.</string>
-  <string name="mateIn5">Mate in 5</string>
-  <string name="mateIn5Description">Deliver checkmate in five moves.</string>
+  <string name="advantage">برتری</string>
+  <string name="advantageDescription">از شانس خود برای بدست اوردن برتری قطعی استفاده کنید. (200cp ≤ eval ≤ 600cp)</string>
+  <string name="castling">قلعه رفتن</string>
+  <string name="castlingDescription">شاه خود را ایمن کنید و رخ خود را برای حمله مستقر کنید.</string>
+  <string name="crushing">تخریب</string>
+  <string name="crushingDescription">استفاده از اشتباه حریف برای بدست آوردن مزیتی کوچک. (eval ≥ 600cp)</string>
+  <string name="equality">برابری</string>
+  <string name="equalityDescription">تغییر وضعیت بازنده، و تضمین تساوی یا وضعیت متعادل. (eval ≤ 200cp)</string>
+  <string name="defensiveMove">حرکت تدافعی</string>
+  <string name="defensiveMoveDescription">حرکت یا دنباله ای از حرکات که برای جلوگیری از دست دادن مهره یا مزیت لازم است.</string>
+  <string name="deflection">منحرف کردن</string>
+  <string name="deflectionDescription">حرکتی که حواس مهره حریف را از وظیفه ای که دارد پرت کند (مانند نگهبانی از یک خانه). گاهی اوقات \"بارگذاری بیش از حد\" نیز نامیده می شود.</string>
+  <string name="discoveredAttack">حمله برخاستی</string>
+  <string name="discoveredAttackDescription">حرکت دادن یک مهره (مانند اسب)، که قبلا جلوی حمله مهره خودمان به یکی از مهره های دور حریف (مانند رخ)، از جلوی راه مهره حمله کننده.</string>
+  <string name="doubleCheck">کیش دوگانه</string>
+  <string name="doubleCheckDescription">کیش دادن به حریف با دو مهره به صورت هم زمان در نتیجهء یک حمله برخاستی که در آن هم مهره برخاست کننده و هم مهره پشت سر آن به شاه حریف حمله می کنند.</string>
+  <string name="endgame">آخر بازی</string>
+  <string name="endgameDescription">یک تاکتیک در لحظات آخر بازی.</string>
+  <string name="fork">چنگال</string>
+  <string name="forkDescription">حرکتی که در آن مهره ای که حرکت می کند دو مهره حریف را به صورت همزمان مورد حمله قرار می دهد.</string>
+  <string name="hangingPiece">مهره بی دفاع</string>
+  <string name="hangingPieceDescription">تاکتیکی که در آن مهره های حریف برای گرفتن، بدون دفاع یا با دفاع ناکافی است.</string>
+  <string name="long">معمای طولانی</string>
+  <string name="longDescription">سه حرکت برای پیروزی.</string>
+  <string name="mate">کیش و مات</string>
+  <string name="mateDescription">بازی را با سبک خاصی ببرید.</string>
+  <string name="mateIn1">مات در یک حرکت</string>
+  <string name="mateIn1Description">در یک حرکت کیش و مات کنید.</string>
+  <string name="mateIn2">مات در دو حرکت</string>
+  <string name="mateIn2Description">در دو حرکت کیش و مات کنید.</string>
+  <string name="mateIn3">مات در سه حرکت</string>
+  <string name="mateIn3Description">در سه حرکت کیش و مات کنید.</string>
+  <string name="mateIn4">مات در چهار حرکت</string>
+  <string name="mateIn4Description">در چهار حرکت کیش و مات کنید.</string>
+  <string name="mateIn5">مات در پنج حرکت یا بیشتر</string>
+  <string name="mateIn5Description">کشف یک مات طولانی و متوالی.</string>
   <string name="mateIn7">Mate in 7</string>
   <string name="mateIn7Description">Deliver checkmate in seven moves.</string>
   <string name="mateIn9">Mate in 9 or more</string>
   <string name="mateIn9Description">Figure out a long mating sequence.</string>
-  <string name="middlegame">Middlegame</string>
-  <string name="middlegameDescription">A tactic during the second phase of the game.</string>
-  <string name="oneMove">One-move puzzle</string>
-  <string name="oneMoveDescription">A puzzle that is only one move long.</string>
-  <string name="opening">Opening</string>
-  <string name="openingDescription">A tactic during the first phase of the game.</string>
-  <string name="pin">Pin</string>
-  <string name="pinDescription">A tactic involving pins, where a piece is unable to move without revealing an attack on a higher value piece.</string>
-  <string name="quietMove">Quiet move</string>
-  <string name="quietMoveDescription">A move that does not make a check or capture, but does prepare an unavoidable threat for a later move.</string>
-  <string name="rookEndgame">Rook endgame</string>
-  <string name="rookEndgameDescription">An endgame with only rooks and pawns.</string>
-  <string name="sacrifice">Sacrifice</string>
-  <string name="sacrificeDescription">A tactic involving giving up material in the short-term, to gain an advantage again after a forced sequence of moves.</string>
-  <string name="short">Short puzzle</string>
-  <string name="shortDescription">Three moves to win.</string>
-  <string name="healthyMix">Healthy mix</string>
-  <string name="healthyMixDescription">A bit of everything. You don\'t know what to expect, so you remain ready for anything! Just like in real games.</string>
+  <string name="middlegame">وسط بازی</string>
+  <string name="middlegameDescription">تاکتیکی در لحظات آخر بازی.</string>
+  <string name="oneMove">معمای یک-حرکتی</string>
+  <string name="oneMoveDescription">یک معما که فقط یک حرکت طول می‌کشد.</string>
+  <string name="opening">گشایش</string>
+  <string name="openingDescription">تاکتیک در مرحله اول بازی.</string>
+  <string name="pin">سنجاق کردن</string>
+  <string name="pinDescription">تاکتیک آچمز (پین)، جایی است که یک مهره مجبور است برای دفاع از یک مهره یا خانهٔ ارزشمند در جای خود میخکوب شود.</string>
+  <string name="quietMove">حرکت طبیعی</string>
+  <string name="quietMoveDescription">حرکتی که نه کیش ایجاد می کند و نه مهره ای را می گیرد و نه تهدید فوری را در پی دارد اما یک تهدید غیر قابل پیشگیری را در حرکات بعد به همراه دارد.</string>
+  <string name="rookEndgame">آخربازی رخ</string>
+  <string name="rookEndgameDescription">یک آخر بازی تنها با رخ ها و پیاده ها.</string>
+  <string name="sacrifice">قربانی</string>
+  <string name="sacrificeDescription">یک تاکتیک شامل کنار از دست دادن مهره در کوتاه مدت، برای به دست آوردن مزیت دوباره پس از یک سری حرکات اجباری.</string>
+  <string name="short">معمای کوتاه</string>
+  <string name="shortDescription">دو حرکت تا پیروزی.</string>
+  <string name="healthyMix">ترکیب سالم</string>
+  <string name="healthyMixDescription">یک ذره از همه چیز. شما نمی دانید چه چیزی پیش روی شماست، بنابراین شما باید برای هر چیزی آماده باشید! دقیقا مثل بازی های واقعی.</string>
   <string name="tsume">Tsume</string>
   <string name="tsumeDescription">Your goal is to checkmate your opponent. Every move you make has to be a check.</string>
   <string name="strikingPawn">Striking pawn</string>
@@ -68,8 +68,8 @@
   <string name="dancingPawnsDescription">A tactic to capture opponent\'s gold with sacrificing a pawn.</string>
   <string name="edgeAttack">Edge attack</string>
   <string name="edgeAttackDescription">A tactic involving attacking opponent\'s first or ninth file.</string>
-  <string name="veryLong">Very long puzzle</string>
-  <string name="veryLongDescription">Seven moves or more to win.</string>
+  <string name="veryLong">پازل خیلی طولانی</string>
+  <string name="veryLongDescription">چهار حرکت یا بیشتر برای برنده شدن.</string>
   <string name="lishogiGames">From Lishogi games</string>
   <string name="lishogiGamesDescription">Puzzles generated from games played on Lishogi.</string>
   <string name="otherSources">From other sources</string>
