--- a/translation/dest/study/fa-IR.xml
+++ b/translation/dest/study/fa-IR.xml
@@ -1,130 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="private">Private</string>
-  <string name="myStudies">My studies</string>
-  <string name="studiesIContributeTo">Studies I contribute to</string>
-  <string name="myPublicStudies">My public studies</string>
-  <string name="myPrivateStudies">My private studies</string>
-  <string name="myFavoriteStudies">My favourite studies</string>
-  <string name="whatAreStudies">What are studies?</string>
-  <string name="allStudies">All studies</string>
-  <string name="studiesCreatedByX">Studies created by %s</string>
-  <string name="noneYet">None yet.</string>
-  <string name="hot">Hot</string>
-  <string name="dateAddedNewest">Date added (newest)</string>
-  <string name="dateAddedOldest">Date added (oldest)</string>
-  <string name="recentlyUpdated">Recently updated</string>
-  <string name="mostPopular">Most popular</string>
-  <string name="addNewChapter">Add a new chapter</string>
+  <string name="private">خصوصی</string>
+  <string name="myStudies">درس های من</string>
+  <string name="studiesIContributeTo">مطالعاتی که من مشارکت میکنم</string>
+  <string name="myPublicStudies">درس های عمومی من</string>
+  <string name="myPrivateStudies">درس های خصوصی من</string>
+  <string name="myFavoriteStudies">درس های مورد علاقه من</string>
+  <string name="whatAreStudies">درس ها چه هستند?</string>
+  <string name="allStudies">همه درس های من</string>
+  <string name="studiesCreatedByX">مطالعاتِ ایجاد شده توسط %s</string>
+  <string name="noneYet">هنوز چیزی نیست.</string>
+  <string name="hot">داغ</string>
+  <string name="dateAddedNewest">بروز(جدید ترین)</string>
+  <string name="dateAddedOldest">تاریخی که اضافه شده است (قدیمی‌ترین)</string>
+  <string name="recentlyUpdated">اخیرا به روز شده</string>
+  <string name="mostPopular">محبوب‌ترین‌</string>
+  <string name="addNewChapter">افزودن فصل جدید</string>
   <plurals name="nbChapters">
-    <item quantity="one">%s Chapter</item>
-    <item quantity="other">%s Chapters</item>
+    <item quantity="one">%s فصل</item>
+    <item quantity="other">%s فصل ها</item>
   </plurals>
   <plurals name="nbGames">
-    <item quantity="one">%s Game</item>
-    <item quantity="other">%s Games</item>
+    <item quantity="one">%s بازی</item>
+    <item quantity="other">%s بازی ها</item>
   </plurals>
-  <string name="addMembers">Add members</string>
+  <string name="addMembers">افزودن اعضا</string>
   <plurals name="nbMembers">
-    <item quantity="one">%s Member</item>
-    <item quantity="other">%s Members</item>
+    <item quantity="one">%s عضو</item>
+    <item quantity="other">%s اعضا</item>
   </plurals>
-  <string name="inviteToTheStudy">Invite to the study</string>
-  <string name="pleaseOnlyInvitePeopleYouKnow">Please only invite people you know, and who actively want to join this study.</string>
-  <string name="searchByUsername">Search by username</string>
-  <string name="spectator">Spectator</string>
-  <string name="contributor">Contributor</string>
-  <string name="kick">Kick</string>
-  <string name="leaveTheStudy">Leave the study</string>
-  <string name="youAreNowAContributor">You are now a contributor</string>
-  <string name="youAreNowASpectator">You are now a spectator</string>
+  <string name="inviteToTheStudy">دعوت به این درس</string>
+  <string name="pleaseOnlyInvitePeopleYouKnow">لطفا تنها افرادی که میشناسید, و یا کسانی که میخواهند فعالانه به این درس بپیوندند را اضافه کنید.</string>
+  <string name="searchByUsername">جستجو بر اساس نام کاربری</string>
+  <string name="spectator">تماشاگر</string>
+  <string name="contributor">مشارکت کننده</string>
+  <string name="kick">اخراج</string>
+  <string name="leaveTheStudy">خروج از درس</string>
+  <string name="youAreNowAContributor">شما یک مشارکت کننده جدید هستید</string>
+  <string name="youAreNowASpectator">شما حالا یک تماشاگرید</string>
   <string name="tags">Tags</string>
-  <string name="like">Like</string>
-  <string name="newTag">New tag</string>
-  <string name="commentThisPosition">Comment on this position</string>
-  <string name="commentThisMove">Comment on this move</string>
-  <string name="annotateWithGlyphs">Annotate with glyphs</string>
-  <string name="theChapterIsTooShortToBeAnalysed">The chapter is too short to be analysed.</string>
-  <string name="onlyContributorsCanRequestAnalysis">Only the study contributors can request a computer analysis.</string>
-  <string name="getAFullComputerAnalysis">Get a full server-side computer analysis of the mainline.</string>
-  <string name="makeSureTheChapterIsComplete">Make sure the chapter is complete. You can only request analysis once.</string>
-  <string name="allSyncMembersRemainOnTheSamePosition">All SYNC members remain on the same position</string>
-  <string name="shareChanges">Share changes with spectators and save them on the server</string>
-  <string name="playing">Playing</string>
-  <string name="first">First</string>
-  <string name="previous">Previous</string>
-  <string name="next">Next</string>
-  <string name="last">Last</string>
-  <string name="shareAndExport">Share &amp; export</string>
-  <string name="cloneStudy">Clone</string>
-  <string name="downloadAllGames">Download all games</string>
-  <string name="downloadGame">Download game</string>
+  <string name="like">پسندیدن</string>
+  <string name="newTag">برچسب جدید</string>
+  <string name="commentThisPosition">نظر دادن به این پوزیسیون</string>
+  <string name="commentThisMove">نظر دادن به این حرکت</string>
+  <string name="annotateWithGlyphs">نشان کردن با علامت ها</string>
+  <string name="theChapterIsTooShortToBeAnalysed">این فصل برای تحلیل شدن بسیار کوتاه است.</string>
+  <string name="onlyContributorsCanRequestAnalysis">تنها مشارکت کنندگان این درس میتوانند درخواست تحلیل کامپیوتری دهند.</string>
+  <string name="getAFullComputerAnalysis">یک تحلیل رایانه‌ای از حرکات اصلی (نه حرکات منشعب و فرعی) با استفاده از منابع سرورها (نه منابع محلی مانند مرورگر، اپلیکیشن و غیره) دریافت نمایید.</string>
+  <string name="makeSureTheChapterIsComplete">مطمئن شوید که فصل کامل است. شما فقط یک بار می‌توانید درخواست تحلیل بدهید.</string>
+  <string name="allSyncMembersRemainOnTheSamePosition">تمام اعضای همگام شده در پوزیسیون یکسان باقی می‌مانند</string>
+  <string name="shareChanges">تغییرات را با تماشاگران به اشتراک بگذارید و آنها را در سرور ذخیره کنید</string>
+  <string name="playing">در حال انجام</string>
+  <string name="first">اولین</string>
+  <string name="previous">پیشین</string>
+  <string name="next">بعدی</string>
+  <string name="last">آخرین</string>
+  <string name="shareAndExport">اشتراک &amp; صدور</string>
+  <string name="cloneStudy">نمونه سازی</string>
+  <string name="downloadAllGames">بارگیری تمام بازی ها</string>
+  <string name="downloadGame">بارگیری بازی</string>
   <string name="studyKif">Study KIF</string>
   <string name="chapterKif">Chapter KIF</string>
   <string name="chapterCsa">Chapter CSA</string>
-  <string name="studyUrl">Study URL</string>
+  <string name="studyUrl">URL درس</string>
   <string name="broadcastUrl">Broadcast URL</string>
-  <string name="currentChapterUrl">Current chapter URL</string>
+  <string name="currentChapterUrl">URL فصل فعلی</string>
   <string name="currentGameUrl">Current game URL</string>
-  <string name="youCanPasteThisInTheForumToEmbed">You can paste this in the forum to embed</string>
-  <string name="startAtInitialPosition">Start at initial position</string>
-  <string name="startAtX">Start at %s</string>
-  <string name="embedInYourWebsite">Embed in your website or blog</string>
-  <string name="readMoreAboutEmbedding">Read more about embedding</string>
-  <string name="onlyPublicStudiesCanBeEmbedded">Only public studies can be embedded!</string>
-  <string name="open">Open</string>
-  <string name="xBroughtToYouByY">%1$s, brought to you by %2$s</string>
-  <string name="studyNotFound">Study not found</string>
-  <string name="editChapter">Edit chapter</string>
-  <string name="newChapter">New chapter</string>
-  <string name="orientation">Orientation</string>
-  <string name="analysisMode">Analysis mode</string>
-  <string name="pinnedChapterComment">Pinned chapter comment</string>
-  <string name="saveChapter">Save chapter</string>
-  <string name="clearAnnotations">Clear annotations</string>
-  <string name="deleteChapter">Delete chapter</string>
-  <string name="deleteThisChapter">Delete this chapter? There is no going back!</string>
-  <string name="clearAllCommentsInThisChapter">Clear all comments, glyphs and drawn shapes in this chapter?</string>
-  <string name="rightUnderTheBoard">Right under the board</string>
-  <string name="noPinnedComment">None</string>
-  <string name="normalAnalysis">Normal analysis</string>
-  <string name="hideNextMoves">Hide next moves</string>
-  <string name="interactiveLesson">Interactive lesson</string>
-  <string name="chapterX">Chapter %s</string>
-  <string name="empty">Empty</string>
-  <string name="startFromInitialPosition">Start from initial position</string>
-  <string name="editor">Editor</string>
-  <string name="startFromCustomPosition">Start from custom position</string>
-  <string name="loadAGameByUrl">Load games by URLs</string>
+  <string name="youCanPasteThisInTheForumToEmbed">برای جاسازی این نوشته، این کد را در تالار گفت و گو قرار دهید</string>
+  <string name="startAtInitialPosition">در موقعیت آغازین شروع نمایید</string>
+  <string name="startAtX">شروع از %s</string>
+  <string name="embedInYourWebsite">در وبسایت یا وبلاگ خود قرار دهید</string>
+  <string name="readMoreAboutEmbedding">درباره قرار دادن (در سایت) بیشتر بخوانید</string>
+  <string name="onlyPublicStudiesCanBeEmbedded">فقط مطالعاتِ عمومی می‌توانند جایگذاری شوند!</string>
+  <string name="open">بگشایید</string>
+  <string name="xBroughtToYouByY">مطالعه %1$s، توسط %2$s برای شما آورده شده است</string>
+  <string name="studyNotFound">مطالعه یافت نشد</string>
+  <string name="editChapter">ویرایش فصل</string>
+  <string name="newChapter">وصل جدید</string>
+  <string name="orientation">جهت</string>
+  <string name="analysisMode">حالت تجزیه تحلیل</string>
+  <string name="pinnedChapterComment">نظر سنجاق شده درباره فصل</string>
+  <string name="saveChapter">ذخیره فصل</string>
+  <string name="clearAnnotations">حاشیه‌نویسی را پاک نمایید</string>
+  <string name="deleteChapter">حذف فصل</string>
+  <string name="deleteThisChapter">آیا میخواهید این فصل را پاک کنید؟امکان برگرداندن آن وجود ندارد!</string>
+  <string name="clearAllCommentsInThisChapter">تمام نظرات، شکلها و نمایه‌های ترسیم شده در این فصل پاک شوند؟</string>
+  <string name="rightUnderTheBoard">درست در زیر تخته بازی</string>
+  <string name="noPinnedComment">هیچ</string>
+  <string name="normalAnalysis">تحلیل ساده</string>
+  <string name="hideNextMoves">پنهان کردن حرکت بعدی</string>
+  <string name="interactiveLesson">درس تعاملی</string>
+  <string name="chapterX">فصل %s</string>
+  <string name="empty">خالی</string>
+  <string name="startFromInitialPosition">از موقعیت ابتدایی شروع نمایید</string>
+  <string name="editor">ویرایشگر</string>
+  <string name="startFromCustomPosition">از موقعیت دلخواه شروع نمایید</string>
+  <string name="loadAGameByUrl">بارگزاری بازی با استفاده از URL</string>
   <string name="loadAPositionFromSfen">Load a position from SFEN</string>
-  <string name="automatic">Automatic</string>
-  <string name="urlOfTheGame">URL of the games, one per line</string>
+  <string name="automatic">خودکار</string>
+  <string name="urlOfTheGame">آدرس اینترنتی بازی، یکی در هر خط</string>
   <string name="loadAGameFromX">Load games from %1$s</string>
-  <string name="createChapter">Create chapter</string>
-  <string name="configureLiveBroadcast">Configure live broadcast</string>
-  <string name="createStudy">Create study</string>
-  <string name="editStudy">Edit study</string>
-  <string name="visibility">Visibility</string>
-  <string name="public">Public</string>
-  <string name="unlisted">Unlisted</string>
-  <string name="inviteOnly">Invite only</string>
-  <string name="allowCloning">Allow cloning</string>
-  <string name="nobody">Nobody</string>
-  <string name="onlyMe">Only me</string>
-  <string name="contributors">Contributors</string>
-  <string name="members">Members</string>
-  <string name="everyone">Everyone</string>
-  <string name="enableSync">Enable sync</string>
-  <string name="yesKeepEveryoneOnTheSamePosition">Yes: keep everyone on the same position</string>
-  <string name="noLetPeopleBrowseFreely">No: let people browse freely</string>
-  <string name="pinnedStudyComment">Pinned study comment</string>
-  <string name="start">Start</string>
-  <string name="save">Save</string>
-  <string name="clearChat">Clear chat</string>
-  <string name="deleteTheStudyChatHistory">Delete the study chat history? There is no going back!</string>
-  <string name="deleteStudy">Delete study</string>
+  <string name="createChapter">ساخت فصل</string>
+  <string name="configureLiveBroadcast">پخش زنده را تنظیم و پیکربندی نمایید</string>
+  <string name="createStudy">مطالعه ایجاد کنید</string>
+  <string name="editStudy">مطالعه را ویرایش نمایید</string>
+  <string name="visibility">وضعیت نمایش</string>
+  <string name="public">عمومی</string>
+  <string name="unlisted">فهرست نشده</string>
+  <string name="inviteOnly">فقط توسط دعوتنامه</string>
+  <string name="allowCloning">اجازه دهید تا بازی شما را کلون کنند که به این معنا است که بتوان آن را دقیقاً کپی کرد</string>
+  <string name="nobody">هیچ کس</string>
+  <string name="onlyMe">تنها من</string>
+  <string name="contributors">مشارکت‌کنندگان</string>
+  <string name="members">اعضا</string>
+  <string name="everyone">همه</string>
+  <string name="enableSync">فعال کردن همگام سازی</string>
+  <string name="yesKeepEveryoneOnTheSamePosition">بله: همه را در پوزیسیونی یکسان نگه دار</string>
+  <string name="noLetPeopleBrowseFreely">خیر: به مردم اجازه جستجوی آزادانه بده</string>
+  <string name="pinnedStudyComment">نظر سنجاق شده درباره مطالعه</string>
+  <string name="start">شروع</string>
+  <string name="save">ذخیره</string>
+  <string name="clearChat">پاک کردن گفتگو</string>
+  <string name="deleteTheStudyChatHistory">آیا سابقه گفتگو پاک شود? امکان بازگشت وجود ندارد!</string>
+  <string name="deleteStudy">پاک کردن درس</string>
   <string name="deleteTheEntireStudy">Delete the entire study? There is no going back!</string>
-  <string name="whereDoYouWantToStudyThat">Where do you want to study that?</string>
+  <string name="whereDoYouWantToStudyThat">کجا میخواهید آنرا مطالعه کنید?</string>
   <string name="startTag" comment="Tags for kif and csa">Start</string>
   <string name="endTag" comment="Tags for kif and csa">End</string>
   <string name="siteTag" comment="Tags for kif and csa">Site</string>
