--- a/translation/dest/coach/fa-IR.xml
+++ b/translation/dest/coach/fa-IR.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="lishogiCoaches">Lishogi coaches</string>
-	<string name="lishogiCoach">Lishogi coach</string>
-	<string name="areYouCoach">Are you a great shogi coach with a %s?</string>
+	<string name="lishogiCoaches">مربی های لیچس</string>
+	<string name="lishogiCoach">مربی لیچس</string>
+	<string name="areYouCoach">آیا شما یک مربی بزرگ با یک عنوان فیده %s هستید؟</string>
 	<string name="becomeACoach">Are you a great shogi coach with experience and do you want to be featured on Lishogi?</string>
 	<string name="nmOrFideTitle">title</string>
-	<string name="confirmTitle">Confirm your title here and we will review your application.</string>
+	<string name="confirmTitle">اینجا عنوان خود را تایید کنید و ما پرونده شما را بررسی خواهیم کرد.</string>
 	<string name="sendApplication">Send us an email at %s and we will review your application.</string>
-	<string name="location">Location</string>
-	<string name="languages">Languages</string>
-	<string name="rating">Rating</string>
-	<string name="hourlyRate">Hourly rate</string>
-	<string name="availability">Availability</string>
-	<string name="accepting">Accepting students</string>
-	<string name="notAccepting">Not accepting students at the moment</string>
-	<string name="xCoachesStudents">%s coaches shogi students</string>
-	<string name="viewXProfile">View %s Lishogi profile</string>
-	<string name="sendPM">Send a private message</string>
-	<string name="aboutMe">About me</string>
-	<string name="playingExperience">Playing experience</string>
-	<string name="teachingExperience">Teaching experience</string>
-	<string name="otherExperiences">Other experiences</string>
-	<string name="bestSkills">Best skills</string>
-	<string name="teachingMethod">Teaching methodology</string>
-	<string name="publicStudies">Public studies</string>
-	<string name="youtubeVideos">YouTube videos</string>
+	<string name="location">موقعیت مکانی</string>
+	<string name="languages">زبان ها</string>
+	<string name="rating">ریتینگ</string>
+	<string name="hourlyRate">حق‌التدریس هر ساعت</string>
+	<string name="availability">دسترس‌پذیری</string>
+	<string name="accepting">دانشجوها را قبول می‌کنم</string>
+	<string name="notAccepting">در حال حاضر پذیرای دانشجویان نیستم</string>
+	<string name="xCoachesStudents">%s مربی شطرنج دانشجویان است</string>
+	<string name="viewXProfile">پروفایل %s در Lishogi را نگاه کنید</string>
+	<string name="sendPM">یک پیام خصوصی ارسال کنید</string>
+	<string name="aboutMe">درباره من</string>
+	<string name="playingExperience">سابقه بازی</string>
+	<string name="teachingExperience">سابقه تدریس</string>
+	<string name="otherExperiences">دیگر تجارب</string>
+	<string name="bestSkills">بیشترین مهارت ها</string>
+	<string name="teachingMethod">شیوه آموزش</string>
+	<string name="publicStudies">مطالعات عمومی</string>
+	<string name="youtubeVideos">ویدیو های یوتیوب</string>
 	<plurals name="studentReviews">
-		<item quantity="one">One student review</item>
-		<item quantity="other">%s student reviews</item>
+		<item quantity="one">ارزیابی یک دانشجو</item>
+		<item quantity="other">ارزیابی %s دانشجو</item>
 	</plurals>
-	<string name="thankYouForReview">Thank you for the review!</string>
-	<string name="xWillApproveIt">%s will approve it very soon, or a moderator will have a look at it.</string>
-	<string name="reviewCoach">Review this coach</string>
-	<string name="describeExperienceWith">Describe your coaching experience with %s</string>
+	<string name="thankYouForReview">از ارزیابی توسط شما سپاسگزاریم!</string>
+	<string name="xWillApproveIt">%s خیلی زود آن را تایید خواهد کرد، یا یک مدیر نگاهی به آن خواهد انداخت.</string>
+	<string name="reviewCoach">این مربی را ارزیابی کنید</string>
+	<string name="describeExperienceWith">تجربه مربی‌گری خود را با %s توصیف نمایید</string>
 </resources>
