--- a/translation/dest/contact/fa-IR.xml
+++ b/translation/dest/contact/fa-IR.xml
@@ -1,76 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="contact">Contact</string>
-  <string name="contactLishogi">Contact Lishogi</string>
-  <string name="whatCanWeHelpYouWith">What can we help you with?</string>
-  <string name="visitThisPage">Visit this page to solve the issue</string>
-  <string name="iCantLogIn">I can\'t log in</string>
-  <string name="noConfirmationEmail">I didn\'t receive my confirmation email</string>
-  <string name="forgotPassword">I forgot my password</string>
-  <string name="forgotUsername">I forgot my username</string>
-  <string name="youCanLoginWithEmail">You can login with the email address you signed up with</string>
-  <string name="lost2FA">I lost access to my two-factor authentication codes</string>
-  <string name="doPasswordReset">Complete a password reset to remove your second factor</string>
-  <string name="accountSupport">I need account support</string>
-  <string name="wantTitle">I want my title displayed on Lishogi</string>
-  <string name="visitTitleConfirmation">To show your title on your Lishogi profile, and participate in Titled Arenas, contact Lishogi at contact@lishogi.org</string>
-  <string name="wantCloseAccount">I want to close my account</string>
-  <string name="closeYourAccount">You can close your account on this page</string>
-  <string name="doNotAskByEmail">Do not ask us by email to close an account, we won\'t do it.</string>
-  <string name="wantReopen">I want to reopen my account</string>
-  <string name="reopenOnThisPage">You can reopen your account on this page. It only works once.</string>
-  <string name="doNotAskByEmailToReopen">Do not ask us by email to reopen an account, we won\'t do it.</string>
-  <string name="wantChangeUsername">I want to change my username</string>
-  <string name="changeUsernameCase">Visit this page to change the case of your username</string>
-  <string name="cantChangeMore">We can\'t change more than the case. For technical reasons, it\'s downright impossible.</string>
-  <string name="orCloseAccount">However, you can close your current account, and create a new one.</string>
-  <string name="wantClearHistory">I want to clear my history or rating</string>
-  <string name="cantClearHistory">It\'s not possible to clear your game history, puzzle history, or ratings.</string>
-  <string name="wantReport">I want to report a player</string>
+  <string name="contact">ارتباط با ما</string>
+  <string name="contactLishogi">ارتباط با Lishogi</string>
+  <string name="whatCanWeHelpYouWith">در چه موردی می توانیم به شما کمک کنیم؟</string>
+  <string name="visitThisPage">از این صفحه بازدید نمایید تا مشکل برطرف شود</string>
+  <string name="iCantLogIn">نمی توانم وارد شوم</string>
+  <string name="noConfirmationEmail">ایمیل تایید ثبت نام را دریافت نکردم</string>
+  <string name="forgotPassword">رمز عبورم را فراموش کردم</string>
+  <string name="forgotUsername">نام کاربری ام را فراموش کردم</string>
+  <string name="youCanLoginWithEmail">شما می توانید با آدرس ایمیلی که برای ثبت نام استفاده کردید وارد شوید</string>
+  <string name="lost2FA">دسترسی به کد احراز هویت دو عاملی را از دست داده ام</string>
+  <string name="doPasswordReset">بازیابی گذرواژه را تکمیل کنید تا هویت‌سنجیِ دومِ شما برداشته شود</string>
+  <string name="accountSupport">به پشتیبانی حساب کاربری نیاز دارم</string>
+  <string name="wantTitle">می خواهم عنوانم در Lishogi نشان داده شود</string>
+  <string name="visitTitleConfirmation">برای آن که عنوان شما روی پروفایل Lishogi شما نشان داده شود، و در میدانهای مسابقه دارای عنوان شرکت کنید، صفحه تایید عنوان را مشاهده کنید</string>
+  <string name="wantCloseAccount">می خواهم حساب کاربری ام را ببندم</string>
+  <string name="closeYourAccount">شما می‌توانید در این صفحه حساب کاربری خود را ببندید</string>
+  <string name="doNotAskByEmail">از طریق رایانامه از ما نخواهید که یک حساب کاربری را ببندیم، ما آن را انجام نخواهیم داد.</string>
+  <string name="wantReopen">می خواهم حساب کاربری ام را بازگشایی کنم</string>
+  <string name="reopenOnThisPage">شما می‌توانید حساب کاربری خود را در این صفحه بازگشایی کنید. این امکان یک بار کار می‌کند.</string>
+  <string name="doNotAskByEmailToReopen">از طریق رایانامه از ما نخواهید که یک حساب کاربری را بازگشایی کنیم، ما آن را انجام نخواهیم داد.</string>
+  <string name="wantChangeUsername">می خواهم نام کاربری ام را عوض کنم</string>
+  <string name="changeUsernameCase">از این صفحه برای تغییر بزرگی یا کوچکیِ حروفِ نام کاربری خود استفاده کنید</string>
+  <string name="cantChangeMore">ما نمی‌توانیم بیشتر از بزرگی یا کوچکی حروف، چیزی را تغییر دهیم. این کار صرفاً به دلایل فنی، غیرممکن است.</string>
+  <string name="orCloseAccount">اگرچه، شما می‌توانید حساب کاربری فعلی خود را بسته، و یک حساب کاربری جدید ایجاد کنید.</string>
+  <string name="wantClearHistory">من می‌خواهم تاریخچه یا امتیاز خود را پاک کنم</string>
+  <string name="cantClearHistory">این ممکن نیست که تاریخچه بازی، تاریخچه معما یا امتیازات خود را پاک کنید.</string>
+  <string name="wantReport">می‌خواهم یک کاربر را گزارش کنم</string>
   <string name="cheating">cheating</string>
   <string name="sandbagging">sandbagging</string>
   <string name="trolling">trolling</string>
   <string name="insults">insults</string>
   <string name="otherReason">some other reason</string>
   <string name="toReportAPlayer">To report a player for %s, use the report form</string>
-  <string name="youCanAlsoReachReportPage">You can also reach that page by clicking the %s report button on a profile page.</string>
-  <string name="doNotReportInForum">Do not report players in the forum.</string>
-  <string name="doNotSendReportEmails">Do not send us report emails.</string>
-  <string name="doNotMessageModerators">Do not send direct messages to moderators.</string>
-  <string name="onlyReports">Only reporting players through the report form is effective.</string>
-  <string name="wantReportBug">I want to report a bug</string>
-  <string name="reportBugInForum">In the Lishogi Feedback section of the forum</string>
-  <string name="reportWebsiteIssue">As a Lishogi website issue on GitHub</string>
-  <string name="reportMobileIssue">As a Lishogi mobile app issue on GitHub</string>
-  <string name="reportBugInDiscord">In the Lishogi Discord server</string>
-  <string name="howToReportBug">Please describe what the bug looks like, what you expected to happen instead, and the steps to reproduce the bug.</string>
-  <string name="illegalPawnCapture">Illegal pawn capture</string>
-  <string name="tryEnPassant">Try this little interactive game to learn more about \"en passant\".</string>
-  <string name="illegalCastling">Illegal or impossible castling</string>
-  <string name="castlingPrevented">Castling is only prevented if the king goes through a controlled square.</string>
-  <string name="castlingRules">Make sure you understand the castling rules</string>
-  <string name="castlingImported">If you imported the game, or started it from a position, make sure you correctly set the castling rights.</string>
-  <string name="insufficientMaterial">Insufficient mating material</string>
-  <string name="noRatingPoints">No rating points were awarded</string>
-  <string name="ratedGame">Make sure you played a rated game. Casual games do not affect the players ratings.</string>
-  <string name="errorPage">Error page</string>
-  <string name="reportErrorPage">If you faced an error page, you may report it:</string>
-  <string name="banAppeal">Appeal for a ban or IP restriction</string>
-  <string name="engineAppeal">Engine or cheat mark</string>
-  <string name="sendAppealTo">You may send an appeal to %s.</string>
-  <string name="falsePositives">False positives do happen sometimes, and we\'re sorry about that.</string>
-  <string name="ifLegit">If your appeal is legitimate, we will lift the ban ASAP.</string>
-  <string name="accountLost">However if you indeed used engine assistance, even just once, then your account is unfortunately lost.</string>
-  <string name="doNotDeny">Do not deny having cheated. If you want to be allowed to create a new account, just admit to what you did, and show that you understood that it was a mistake.</string>
-  <string name="otherRestriction">Other restriction</string>
-  <string name="collaboration">Collaboration, legal, commercial</string>
-  <string name="monetizing">Monetising Lishogi</string>
-  <string name="buyingLishogi">Buying Lishogi</string>
-  <string name="authorizationToUse">Authorisation to use Lishogi</string>
-  <string name="welcomeToUse">You are welcome to use Lishogi for your activity, even commercial.</string>
-  <string name="videosAndBooks">You can show it in your videos, and you can print screenshots of Lishogi in your books.</string>
-  <string name="creditAppreciated">Credit is appreciated but not required.</string>
-  <string name="noneOfTheAbove">None of the above</string>
-  <string name="sendEmailAt">Send us an email at %s.</string>
-  <string name="explainYourRequest">Please explain your request clearly and thoroughly. State your Lishogi username, and any information that could help us help you.</string>
+  <string name="youCanAlsoReachReportPage">شما همچنین می‌توانید با کلیک بر کلیدِ %s در هر صفحه کاربری می‌توانید به آن صفحه دسترسی پیدا کنید.</string>
+  <string name="doNotReportInForum">در تالار گفت و گو کاربرها را گزارش نکنید.</string>
+  <string name="doNotSendReportEmails">از ارسال رایانامه به ما برای گزارش خودداری کنید.</string>
+  <string name="doNotMessageModerators">لطفا پیام مستقیم به مدیران سایت نفرستید.</string>
+  <string name="onlyReports">تنها گزارشِ کاربران از راه فرم گزارش می‌تواند موثر باشد.</string>
+  <string name="wantReportBug">می‌خواهم یک ایراد فنی را گزارش کنم</string>
+  <string name="reportBugInForum">در قسمت بازخوردِ Lishogi در تالار گفت و گو</string>
+  <string name="reportWebsiteIssue">به عنوان یک مشکلِ وب‌سایت Lishogi روی GitHub</string>
+  <string name="reportMobileIssue">به عنوان یک مشکلِ اپلیکیشن موبایل Lishogi روی GitHub</string>
+  <string name="reportBugInDiscord">در سرورِ دیسکوردِ Lishogi</string>
+  <string name="howToReportBug">لطفاً توصیف کنید که نقصان فنی چگونه است، شما انتظار داشتید به جای آن چه اتفاقی رخ می‌داد، و گامهایی که نقصان را مجدداً ایجاد می‌کند را شرح دهید.</string>
+  <string name="illegalPawnCapture">زدنِ غیرقانونیِ سرباز</string>
+  <string name="tryEnPassant">این بازی تعاملی کوچک را امتحان کنید تا در مورد \"en passant\" بیشتر یاد بگیرید.</string>
+  <string name="illegalCastling">قلعه رفتن غیر ممکن یا غیر مجاز</string>
+  <string name="castlingPrevented">از قلعه‌زدن فقط وقتی جلوگیری می‌شود که شاه حرکتهای کنترل‌شده‌ای را انجام می‌دهد.</string>
+  <string name="castlingRules">مطمئن شوید که قوانین قلعه زدن را می‌فهمید</string>
+  <string name="castlingImported">اگر که شما بازی را وارد و بارگذاری کرده‌اید، یا از یک موقعیت میانی (وسطِ بازی در جریان و به جز وضعیت اولیه) شروع کرده‌اید، مطمئن شوید که قوانین قلعه‌زدن را درست تنظیم می‌کنید.</string>
+  <string name="insufficientMaterial">نبودِ مهره کافی برای مات کردن</string>
+  <string name="noRatingPoints">هیچ امتیازی اختصاص داده نشد</string>
+  <string name="ratedGame">مطمئن شوید که یک بازی امتیازگذاری شده را بازی کرده‌اید. بازیهای دست‌گرمی و بدون امتیاز، تاثیری در رده‌بندی بازیکنان ندارند.</string>
+  <string name="errorPage">صفحه خطا</string>
+  <string name="reportErrorPage">اگر با صفحه خطا مواجه شدید، می‌توانید آن را گزارش کنید:</string>
+  <string name="banAppeal">درخواست بازنگری برای یک ممنوعیت یا محدودیتِ IP</string>
+  <string name="engineAppeal">نشانه استفاده از موتور تحلیل یا تقلب</string>
+  <string name="sendAppealTo">شما می‌توانید یک درخواست بررسی مجدد به %s ارسال کنید.</string>
+  <string name="falsePositives">مثبتهای اشتباهی حتماً گاهی اتفاق می‌افتد، و ما درباره آن متاسفیم.</string>
+  <string name="ifLegit">اگر درخواست بازنگری شما مشروع و قانونی باشد، ما در نزدیکترین زمان ممکن ممنوعیت را رفع خواهیم کرد.</string>
+  <string name="accountLost">با این حال اگر شما واقعاً حتی یک بار از کمک موتور تحلیل‌گر استفاده کرده‌اید، حساب کاربری شما متاسفانه از دست رفته است.</string>
+  <string name="doNotDeny">این که تقلب کرده‌اید را انکار نکنید. اگر می‌خواهید به شما اجازه داده شود تا یک حساب کاربری جدید بسازید، فقط به کاری که کرده‌اید اذعان کنید، و نشان دهید که شما متوجه شدید آن کار اشتباه بوده است.</string>
+  <string name="otherRestriction">محدودیتِ دیگر</string>
+  <string name="collaboration">تعامل، قانونی، تجاری</string>
+  <string name="monetizing">کسب درآمد و انتفاع مالی از Lishogi</string>
+  <string name="buyingLishogi">خریدِ Lishogi</string>
+  <string name="authorizationToUse">مجوز برای استفاده از Lishogi</string>
+  <string name="welcomeToUse">شما می‌توانید از Lishogi برای فعالیت خود، حتی اگر تجاری باشد، استفاده کنید.</string>
+  <string name="videosAndBooks">شما می‌توانید آن را در ویدئوهای خود نشان دهید، و می‌توانید تصاویری از Lishogi را در کتابهای خود چاپ نمایید.</string>
+  <string name="creditAppreciated">اعتبار بهتر است ولی الزامی نیست.</string>
+  <string name="noneOfTheAbove">هیچ یک از موارد فوق</string>
+  <string name="sendEmailAt">یک رایانامه برای ما به آدرس %s ارسال نمایید.</string>
+  <string name="explainYourRequest">لطفاً درخواست خود را به صورت کامل و واضح توضیح دهید. نام کاربریِ Lishogi خود و هر گونه اطلاعاتی که می‌تواند به ما در کمک به شما یاری برساند را ذکر کنید.</string>
 </resources>
