--- a/translation/dest/lag/fa-IR.xml
+++ b/translation/dest/lag/fa-IR.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="isLishogiLagging">Is Lishogi lagging?</string>
-  <string name="measurementInProgressThreeDot">Measurements in progress...</string>
-  <string name="noAndYourNetworkIsGood">No. And your network is good.</string>
-  <string name="noAndYourNetworkIsBad">No. And your network is bad.</string>
-  <string name="yesItWillBeFixedSoon">Yes. It will be fixed soon!</string>
-  <string name="andNowTheLongAnswerLagComposedOfTwoValues">And now, the long answer! Game lag is composed of two unrelated values (lower is better):</string>
-  <string name="lishogiServerLatency">Lishogi server latency</string>
-  <string name="lishogiServerLatencyExplanation">The time it takes to process a move on the server. It\'s the same for everybody, and only depends on the server load. The more players and the higher it gets, but Lishogi developers do their best to keep it low. It rarely exceeds 10ms.</string>
-  <string name="networkBetweenLishogiAndYou">Network between Lishogi and you</string>
-  <string name="networkBetweenLishogiAndYouExplanation">The time it takes to send a move from your computer to Lishogi server, and get the response back. It\'s specific to your distance to Lishogi (United Kingdom), and to the quality of your Internet connection. Lishogi developers cannot fix your wifi or make light go faster.</string>
-  <string name="youCanFindTheseValuesAtAnyTimeByClickingOnYourUsername">You can find both these values at any time, by clicking your username in the top bar.</string>
-  <string name="lagCompensation">Lag compensation</string>
-  <string name="lagCompensationExplanation">Lishogi compensates network lag. This includes sustained lag and occasional lag spikes. There are limits and heuristics based on time control and the compensated lag so far, so that the result should feel reasonable for both players. As a result, having a higher network lag than your opponent is not a handicap!</string>
+  <string name="isLishogiLagging">آیا Lishogi تاخیر دارد؟</string>
+  <string name="measurementInProgressThreeDot">سنجش‌ها در جریان است...</string>
+  <string name="noAndYourNetworkIsGood">خیر. و شبکه شما خوب است.</string>
+  <string name="noAndYourNetworkIsBad">خیر. و شبکه شما بد است.</string>
+  <string name="yesItWillBeFixedSoon">بله. به زودی درست خواهد شد!</string>
+  <string name="andNowTheLongAnswerLagComposedOfTwoValues">و حالا، پاسخ مفصل! تاخیر بازی ناشی از دو مقدار نامربوط است (هر چه کمتر بهتر):</string>
+  <string name="lishogiServerLatency">تاخیر سِروِر Lishogi</string>
+  <string name="lishogiServerLatencyExplanation">زمانی که طول می‌کشد تا یک حرکت بر روی سِروِر پردازش شود. این برای همه مشابه است، و فقط وابسته به بار روی سِروِر می‌باشد. هر چه بازیکنان بیشتر باشند بیشتر طول می‌کشد، اما توسعه‌دهندگان Lishogi بهترین تلاش خود را انجام می‌دهند تا آن را پایین نگه دارند. این مقدار به ندرت از 10ms بالاتر می‌رود.</string>
+  <string name="networkBetweenLishogiAndYou">شبکه بین Lishogi و شما</string>
+  <string name="networkBetweenLishogiAndYouExplanation">زمانی که طول می‌کشد تا یک حرکت از رایانه شما به سِروِر Lishogi ارسال شود، و پاسخ را برگرداند. این مختص به فاصله شما تا Lishogi (فرانسه) و کیفیت اتصال اینترنت شما می‌باشد. توسعه‌دهندگان Lishogi نمی‌توانند وای‌فای شما را تنظیم کنند یا کاری کنند که نور سریع‌تر حرکت کند.</string>
+  <string name="youCanFindTheseValuesAtAnyTimeByClickingOnYourUsername">شما همیشه می‌توانید با کلیک کردن روی نام کاربری خود در نوار فوقانی، هر دوی این مقادیر را پیدا کنید.</string>
+  <string name="lagCompensation">جبرانِ تاخیر</string>
+  <string name="lagCompensationExplanation">Lishogi تأخیر شبکه را جبران می‌کند. این شامل تأخیر پایدار و افزایش گاه به گاه تأخیر می‌شود. محدودیت‌ها و ابتکارات مبتنی بر کنترل زمان و تاخیر جبران شده تا کنون وجود دارد، به طوری که نتیجه باید برای هر دو بازیکن منطقی به نظر برسد. در نتیجه، تأخیر بیشتر در شبکه نسبت به حریف خود، یک نقص نیست!</string>
 </resources>
