--- a/translation/dest/puzzle/fa-IR.xml
+++ b/translation/dest/puzzle/fa-IR.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="puzzles">Puzzles</string>
-  <string name="puzzleThemes">Puzzle themes</string>
-  <string name="recommended">Recommended</string>
-  <string name="phases">Phases</string>
-  <string name="motifs">Motifs</string>
-  <string name="advanced">Advanced</string>
-  <string name="lengths">Lengths</string>
-  <string name="mates">Mates</string>
-  <string name="goals">Goals</string>
-  <string name="origin">Origin</string>
-  <string name="specialMoves">Special moves</string>
-  <string name="didYouLikeThisPuzzle">Did you like this puzzle?</string>
-  <string name="voteToLoadNextOne">Vote to load the next one!</string>
+  <string name="puzzles">معماها</string>
+  <string name="puzzleThemes">تم پازل ها</string>
+  <string name="recommended">توصیه شده
+
+عنوان های پازل ها در  https://lishogi.org/training/themes قابل مشاهده است
+
+تنها موضوع تحت عنوان \"healthy mix\" است که تغییری نخواهد کرد.</string>
+  <string name="phases">فاز ها</string>
+  <string name="motifs">موضوع</string>
+  <string name="advanced">پیشرفته</string>
+  <string name="lengths">مدت</string>
+  <string name="mates">مات</string>
+  <string name="goals">اهداف</string>
+  <string name="origin">منشا</string>
+  <string name="specialMoves">حرکات مخصوص</string>
+  <string name="didYouLikeThisPuzzle">شما این پازل را دوست داشتید؟</string>
+  <string name="voteToLoadNextOne">برای بارگزاری بعدی رای دهید</string>
   <string name="yourPuzzleRatingX">Your puzzle rating: %s</string>
   <string name="findTheBestMoveForX" comment="%s - sente(black)/gote(white)">Find the best move for %s.</string>
-  <string name="toGetPersonalizedPuzzles">To get personalized puzzles:</string>
-  <string name="puzzleId">Puzzle %s</string>
-  <string name="puzzleOfTheDay">Puzzle of the day</string>
-  <string name="clickToSolve">Click to solve</string>
-  <string name="goodMove">Good move</string>
-  <string name="bestMove">Best move!</string>
-  <string name="keepGoing">Keep going…</string>
-  <string name="puzzleSuccess">Success!</string>
-  <string name="puzzleComplete">Puzzle complete!</string>
-  <string name="notTheMove">That\'s not the move!</string>
-  <string name="trySomethingElse">Try something else.</string>
-  <string name="ratingX">Rating: %s</string>
-  <string name="hidden">hidden</string>
+  <string name="toGetPersonalizedPuzzles">برای دریافت پازل شخصی سازی شده</string>
+  <string name="puzzleId">معمای %s</string>
+  <string name="puzzleOfTheDay">مسئله روز</string>
+  <string name="clickToSolve">برای جل کردن کلیک کنید</string>
+  <string name="goodMove">حرکتی خوب</string>
+  <string name="bestMove">بهترین حرکت!</string>
+  <string name="keepGoing">ادامه دهید…</string>
+  <string name="puzzleSuccess">موفقیت!</string>
+  <string name="puzzleComplete">پازل تمام شد!</string>
+  <string name="notTheMove">ابن حرکت صحیح نیست</string>
+  <string name="trySomethingElse">چیز دیگری پیدا کنید</string>
+  <string name="ratingX">امتیاز: %s</string>
+  <string name="hidden">پنهان</string>
   <plurals name="playedXTimes">
-    <item quantity="one">Played %s time</item>
-    <item quantity="other">Played %s times</item>
+    <item quantity="one">%s بار بازی شده است</item>
+    <item quantity="other">این جدول%s بار بازی شده است</item>
   </plurals>
   <plurals name="xMovesLeft">
     <item quantity="one">%s move left</item>
     <item quantity="other">%s moves left</item>
   </plurals>
-  <string name="fromGameLink">From game %s</string>
+  <string name="fromGameLink">برگرفته شده از بازی %s</string>
   <string name="puzzleSource">Source: %s</string>
-  <string name="continueTraining">Continue training</string>
-  <string name="difficultyLevel">Difficulty level</string>
-  <string name="normal">Normal</string>
-  <string name="easier">Easier</string>
-  <string name="easiest">Easiest</string>
-  <string name="harder">Harder</string>
-  <string name="hardest">Hardest</string>
-  <string name="example">Example</string>
-  <string name="addAnotherTheme">Add another theme</string>
-  <string name="jumpToNextPuzzleImmediately">Jump to next puzzle immediately</string>
-  <string name="puzzleDashboard">Puzzle dashboard</string>
-  <string name="improvementAreas">Improvement areas</string>
-  <string name="strengths">Strengths</string>
-  <string name="history">Puzzle history</string>
-  <string name="solved">solved</string>
-  <string name="failed">failed</string>
+  <string name="continueTraining">ادامه دادن تمرین</string>
+  <string name="difficultyLevel">میزان سختی</string>
+  <string name="normal">معمولی</string>
+  <string name="easier">اسان تر</string>
+  <string name="easiest">آسان‌ترین</string>
+  <string name="harder">سخت تر</string>
+  <string name="hardest">سخت‌ترین</string>
+  <string name="example">مثال</string>
+  <string name="addAnotherTheme">تم دیگری را اضافه کنید.</string>
+  <string name="jumpToNextPuzzleImmediately">فورا به مسئله بعدی برورید
+با فعال کردن این تنظیمات ، صفحه به محض تکمیل پازلی که مشاهده می کنید به یک معمای جدید منتقل می شود.</string>
+  <string name="puzzleDashboard">داشبورد پازل</string>
+  <string name="improvementAreas">نقاط ضعف</string>
+  <string name="strengths">استحکامات</string>
+  <string name="history">تاریخ پازل</string>
+  <string name="solved">حل شده</string>
+  <string name="failed">شکست!</string>
 </resources>
