--- a/translation/dest/site/es-ES.xml
+++ b/translation/dest/site/es-ES.xml
@@ -18,6 +18,7 @@
 	<string name="checkmate">Jaque mate</string>
 	<string name="stalemate">Ahogado</string>
 	<string name="impasse">Punto muerto</string>
+	<string name="repetition" comment="Status of a game ending due to repeated positions">Repetition</string>
 	<string name="perpetualCheck">Jaque perpetuo</string>
 	<string name="royalsLost" comment="Used in chushogi">Se han perdido todas las piezas reales</string>
 	<string name="bareKing" comment="Used in chushogi">Rey despojado</string>
