--- a/translation/dest/site/hi-IN.xml
+++ b/translation/dest/site/hi-IN.xml
@@ -18,6 +18,7 @@
 	<string name="checkmate">शह और मात</string>
 	<string name="stalemate">स्टेलमेट (Stalemate)</string>
 	<string name="impasse">इमपास्से (Impasse)</string>
+	<string name="repetition" comment="Status of a game ending due to repeated positions">Repetition</string>
 	<string name="perpetualCheck">Perpetual check</string>
 	<string name="royalsLost" comment="Used in chushogi">All royal pieces lost</string>
 	<string name="bareKing" comment="Used in chushogi">Bare king</string>
