--- a/translation/dest/site/it-IT.xml
+++ b/translation/dest/site/it-IT.xml
@@ -18,6 +18,7 @@
 	<string name="checkmate">Scacco matto</string>
 	<string name="stalemate">Stallo</string>
 	<string name="impasse">Impraticabile</string>
+	<string name="repetition" comment="Status of a game ending due to repeated positions">Repetition</string>
 	<string name="perpetualCheck">Scacco perpetuo</string>
 	<string name="royalsLost" comment="Used in chushogi">Tutti i pezzi reali sono persi</string>
 	<string name="bareKing" comment="Used in chushogi">Re scoperto</string>
