--- a/translation/dest/storm/fa-IR.xml
+++ b/translation/dest/storm/fa-IR.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="moveToStart">Move to start</string>
-  <string name="puzzlesSolved">puzzles solved</string>
-  <string name="newDailyHighscore">New daily highscore!</string>
-  <string name="newWeeklyHighscore">New weekly highscore!</string>
-  <string name="newMonthlyHighscore">New monthly highscore!</string>
-  <string name="newAllTimeHighscore">New all-time highscore!</string>
-  <string name="previousHighscoreWasX">Previous highscore was %s</string>
-  <string name="playAgain">Play again</string>
+  <string name="moveToStart">برای شروع حرکت کنید</string>
+  <string name="puzzlesSolved">معماها حل شد</string>
+  <string name="newDailyHighscore">رکورد جدید روزانه!</string>
+  <string name="newWeeklyHighscore">رکورد جدید هفتگی!</string>
+  <string name="newMonthlyHighscore">رکورد جدید ماهانه!</string>
+  <string name="newAllTimeHighscore">بالاترین امتیاز از ابتدا تا کنون!</string>
+  <string name="previousHighscoreWasX">بالاترین امتیاز پیشین %s بود</string>
+  <string name="playAgain">دوباره بازی کنید</string>
   <plurals name="xRuns">
-    <item quantity="one">1 run</item>
-    <item quantity="other">%s runs</item>
+    <item quantity="one">1 دور</item>
+    <item quantity="other">%s دور</item>
   </plurals>
   <plurals name="playedNbRunsOfPuzzleStorm">
-    <item quantity="one">Played one run of %2$s</item>
-    <item quantity="other">Played %1$s runs of %2$s</item>
+    <item quantity="one">یک دور از %2$s بازی شد</item>
+    <item quantity="other">%1$s دور از %2$s بازی شد</item>
   </plurals>
-  <string name="highscoreX">Highscore: %s</string>
-  <string name="score">Score</string>
-  <string name="moves">Moves</string>
-  <string name="accuracy">Accuracy</string>
-  <string name="combo">Combo</string>
-  <string name="time">Time</string>
-  <string name="timePerMove">Time per move</string>
-  <string name="highestSolved">Highest solved</string>
-  <string name="puzzlesPlayed">Puzzles played</string>
-  <string name="newRun">New run (hotkey: Space)</string>
-  <string name="endRun">End run (hotkey: Enter)</string>
-  <string name="highscores">Highscores</string>
-  <string name="viewBestRuns">View best runs</string>
-  <string name="bestRunOfDay">Best run of day</string>
-  <string name="runs">Runs</string>
+  <string name="highscoreX">بالاترین امتیاز: %s</string>
+  <string name="score">امتیاز</string>
+  <string name="moves">حرکت‌ها</string>
+  <string name="accuracy">دقت</string>
+  <string name="combo">ترکیب</string>
+  <string name="time">زمان</string>
+  <string name="timePerMove">زمان برای هر حرکت</string>
+  <string name="highestSolved">سخت‌ترین معمای حل‌شده</string>
+  <string name="puzzlesPlayed">معماها بازی شدند</string>
+  <string name="newRun">دور جدید (میانبر: Space)</string>
+  <string name="endRun">پایان دور (میانبر: Enter)</string>
+  <string name="highscores">بالاترین امتیازها</string>
+  <string name="viewBestRuns">مشاهده بهترین دورها</string>
+  <string name="bestRunOfDay">بهترین دور روز</string>
+  <string name="runs">دورها</string>
 </resources>
