--- a/translation/dest/streamer/fa-IR.xml
+++ b/translation/dest/streamer/fa-IR.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="xStreamsShogi">%s streams shogi</string>
-  <string name="lishogiStreamers">Lishogi streamers</string>
-  <string name="lishogiStreamer">Lishogi streamer</string>
-  <string name="live">LIVE!</string>
-  <string name="offline">OFFLINE</string>
-  <string name="currentlyStreaming">Currently streaming: %s</string>
-  <string name="lastStream">Last stream %s</string>
-  <string name="becomeStreamer">Become a Lishogi streamer</string>
-  <string name="doYouHaveStream">Do you have a Twitch or YouTube channel?</string>
-  <string name="hereWeGo">Here we go!</string>
-  <string name="allStreamers">All streamers</string>
-  <string name="editPage">Edit streamer page</string>
-  <string name="yourPage">Your streamer page</string>
-  <string name="downloadKit">Download streamer kit</string>
-  <string name="xIsStreaming">%s is streaming</string>
-  <string name="rules">Streaming rules</string>
-  <string name="rule1">Include the keyword \"lishogi.org\" in your stream title and use the category \"Shogi\" when you stream on Lishogi.</string>
-  <string name="rule2">Remove the keyword when you stream non-Lishogi stuff.</string>
-  <string name="rule3">Lishogi will detect your stream automatically and enable the following perks:</string>
-  <string name="perks">Benefits of streaming with the keyword</string>
-  <string name="perk1">Get a flaming streamer icon on your Lishogi profile.</string>
-  <string name="perk2">Get bumped up to the top of the streamers list.</string>
-  <string name="perk3">Notify your Lishogi followers.</string>
-  <string name="perk4">Show your stream in your games, tournaments and studies.</string>
+  <string name="lishogiStreamers">استریمر لیچس</string>
+  <string name="lishogiStreamer">استریمر لیچس</string>
+  <string name="live">زنده</string>
+  <string name="offline">آقلاین</string>
+  <string name="currentlyStreaming">در حال استریم: %s</string>
+  <string name="lastStream">آخرین استریم %s</string>
+  <string name="becomeStreamer">تبدیل شدن به استریمر</string>
+  <string name="doYouHaveStream">ایا شما استریم دارید؟</string>
+  <string name="hereWeGo">اینجا برویم</string>
+  <string name="allStreamers">همه ی استریمر ها</string>
+  <string name="editPage">ویرایش صفحه استریم</string>
+  <string name="yourPage">ویرایش صفحه استریم</string>
+  <string name="downloadKit">دانلود کیت استریمر</string>
+  <string name="xIsStreaming">%s در حال استریم کردن است</string>
+  <string name="rules">قونین استریم</string>
+  <string name="rule1">Twitch این گروه را \"شطرنج\" در همه زبانها می نامد: https://www.twitch.tv/directory/game/Chess - بنابراین توصیه می کنیم متن انگلیسی را در اینجا نگه دارید.</string>
+  <string name="rule2">هنگام پخش چیزهای غیر مجوز ، کلمه کلیدی را حذف کنید.</string>
+  <string name="rule3">لیچس جریان شما را به صورت خودکار تشخیص داده و قدرت پردازش زیر را فعال می کند:</string>
+  <string name="perks">مزایای جریان با کلمه کلیدی</string>
+  <string name="perk1">یک نماد جریان مستقیم شعله ور در نمایه لیچس خود دریافت کنید.</string>
+  <string name="perk2">در بالای لیست پخش کننده ها پرش کنید.</string>
+  <string name="perk3">به فالوور های خود در لیچس اطلاع دهید</string>
+  <string name="perk4">جریان خود را در بازی ها مسابقات و مطالعات خود نشان دهید</string>
   <string name="youHaveBeenSelectedFrontpage">You have been selected for frontpage featuring!</string>
   <string name="noteThatOnlyLimited">Note that we can only show a limited number of streams on the homepage, </string>
   <string name="soYoursMayNotAlwaysAppear">so yours may not always appear.</string>
-  <string name="approved">Your stream is approved.</string>
-  <string name="pendingReview">Your stream is being reviewed by moderators.</string>
-  <string name="pleaseFillIn">Please fill in your streamer information, and upload a picture.</string>
-  <string name="whenReady">When you are ready to be listed as a Lishogi streamer, %s</string>
-  <string name="requestReview">request a moderator review</string>
+  <string name="approved">استریم شما تایید شده است</string>
+  <string name="pendingReview">استریم شما توسط مدیران سایت درحال بررسی است</string>
+  <string name="pleaseFillIn">لطفاً اطلاعات جابجایی خود را پر کنید و تصویری بارگذاری کنید.</string>
+  <string name="whenReady">زمانی که شما آماده‌اید تا در لیست استریم کننده‌های Lishogi قرار گیرید، %s</string>
+  <string name="requestReview">درخواست بررسی مدیر کنید</string>
   <string name="anotherLanguage">If your stream is in a language other than English, include the correct language tag (%s), enclosed in square brackets, at the start of your stream title.
 As examples, you can include \"[RU]\" for Russian, \"[TR]\" for Turkish, \"[FR]\" for French, etc.
 Put this in the stream title in the Twitch or YouTube page, not in the Lishogi stream settings.
@@ -39,24 +39,24 @@ If your stream is in English, there is no need to include a language tag.
 
 Streamer pages eventually expire if they are not used for a long time, also, you must stream once within a week of your approval or the page de-activates. The streaming trophy will also not appear on your account until you’ve streamed. If your streamer page has expired you must apply again and wait to be approved.
  </string>
-  <string name="twitchUsername">Your Twitch username or URL</string>
-  <string name="optionalOrEmpty">Optional. Leave empty if none</string>
-  <string name="youtubeChannel">Your YouTube channel ID or URL</string>
-  <string name="streamerName">Your streamer name on Lishogi</string>
+  <string name="twitchUsername">نام کاربری شما در توییچ</string>
+  <string name="optionalOrEmpty">اختیاری. اگر هیچ کدام خالی نیست</string>
+  <string name="youtubeChannel">ایدی شما در یوتیوب ویا کانال .</string>
+  <string name="streamerName">نام استریم شما رد لیچس</string>
   <plurals name="keepItShort">
-    <item quantity="one">Keep it short: %s character max</item>
-    <item quantity="other">Keep it short: %s characters max</item>
+    <item quantity="one">کوتاه بنویسید: کمتر از %s حرف</item>
+    <item quantity="other">کوتاه بنویسید: کمتر از %s حرف</item>
   </plurals>
-  <string name="visibility">Visible on the streamers page</string>
-  <string name="whenApproved">When approved by moderators</string>
-  <string name="headline">Headline</string>
-  <string name="tellUsAboutTheStream">Tell us about your stream in one sentence</string>
-  <string name="longDescription">Long description</string>
-  <string name="xStreamerPicture">%s streamer picture</string>
-  <string name="changePicture">Change/delete your picture</string>
-  <string name="uploadPicture">Upload a picture</string>
+  <string name="visibility">در صفحه استریم قابل دیدن است.</string>
+  <string name="whenApproved">هنگام تأیید مدیران سایت</string>
+  <string name="headline">عنوان .</string>
+  <string name="tellUsAboutTheStream">موضوع خود را در یک جمله به ما بگویید.</string>
+  <string name="longDescription">توضیحات  طولانی.</string>
+  <string name="xStreamerPicture">تصویر استریمر %s</string>
+  <string name="changePicture">تصویر خود را تغییر دهید / حذف کنید</string>
+  <string name="uploadPicture">بارگذاری تصویر</string>
   <string name="deletePicture">Delete picture</string>
-  <string name="maxSize">Max size: %s</string>
+  <string name="maxSize">بیشترین اندازه یا حجم: %s</string>
   <string name="installBlocker">Install a malware blocker!</string>
   <string name="beSafe">Be safe from ads and trackers
 infesting Twitch and YouTube.
