--- a/translation/dest/team/fa-IR.xml
+++ b/translation/dest/team/fa-IR.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="team">Team</string>
-  <string name="teams">Teams</string>
+  <string name="team">تیم</string>
+  <string name="teams">تیم‌ ها</string>
   <plurals name="nbMembers">
-    <item quantity="one">%s member</item>
-    <item quantity="other">%s members</item>
+    <item quantity="one">%s عضو</item>
+    <item quantity="other">%s عضو</item>
   </plurals>
-  <string name="allTeams">All teams</string>
-  <string name="newTeam">New team</string>
-  <string name="myTeams">My teams</string>
-  <string name="noTeamFound">No team found</string>
-  <string name="joinTeam">Join team</string>
-  <string name="quitTeam">Leave team</string>
+  <string name="allTeams">همه تیم‌ ها</string>
+  <string name="newTeam">ایجاد تیم جدید</string>
+  <string name="myTeams">تیم‌ های من</string>
+  <string name="noTeamFound">تیمی پیدا نشد</string>
+  <string name="joinTeam">پیوستن به تیم</string>
+  <string name="quitTeam">خروج از تیم</string>
   <string name="anyoneCanJoin">Free for all</string>
   <string name="aConfirmationIsRequiredToJoin">A confirmation is required to join</string>
   <string name="joiningPolicy">Joining policy</string>
   <plurals name="teamLeaders">
-    <item quantity="one">Team leader</item>
-    <item quantity="other">Team leaders</item>
+    <item quantity="one">رهبر گروه</item>
+    <item quantity="other">رهبران گروه</item>
   </plurals>
   <string name="teamBestPlayers">Best players</string>
-  <string name="teamRecentMembers">Recent members</string>
-  <string name="kickSomeone">Kick someone out of the team</string>
-  <string name="whoToKick">Who do you want to kick out of the team?</string>
+  <string name="teamRecentMembers">اعضای اخیر</string>
+  <string name="kickSomeone">آیا می خواهید {0} را از تیم اخراج کنید</string>
+  <string name="whoToKick">چه کسی را می خواهید از تیم اخراج کنید?</string>
   <plurals name="xJoinRequests">
-    <item quantity="one">%s join request</item>
-    <item quantity="other">%s join requests</item>
+    <item quantity="one">%s درخواست پیوستن</item>
+    <item quantity="other">%s درخواست پیوستن</item>
   </plurals>
-  <string name="willBeReviewed">Your join request will be reviewed by the team leader.</string>
-  <string name="beingReviewed">Your join request is being reviewed by the team leader.</string>
-  <string name="teamBattle">Team Battle</string>
-  <string name="teamBattleOverview">A battle of multiple teams, each player scores points for their team</string>
-  <string name="teamTournament">Team tournament</string>
-  <string name="teamTournamentOverview">An Arena tournament that only members of your team can join</string>
-  <string name="messageAllMembers">Message all members</string>
-  <string name="messageAllMembersOverview">Send a private message to every member of the team</string>
-  <string name="messageAllMembersLongDescription">Send a private message to ALL members of the team.
-You can use this to call players to join a tournament or a team battle.
-Players who don\'t like receiving your messages might leave the team.</string>
-  <string name="teamsIlead">Teams I lead</string>
-  <string name="youWayWantToLinkOneOfTheseTournaments">You may want to link one of these upcoming tournaments?</string>
-  <string name="usersWhoCanManageThisTeam">Users who can manage this team</string>
-  <string name="leadersChat">Leaders chat</string>
+  <string name="willBeReviewed">درخواست عضویت شما توسط مسئول گروه بررسی خواهد شد.</string>
+  <string name="beingReviewed">درخواست عضویت شما توسط مسئول گروه در حال بررسی می باشد.</string>
+  <string name="teamBattle">مبارزه تیمی</string>
+  <string name="teamBattleOverview">مبارزه ی چندین تیم، امتیاز هر بازیکن برای تیم اش حساب می شود</string>
+  <string name="teamTournament">مسابقه تیمی</string>
+  <string name="teamTournamentOverview">یک میدان مسابقه که فقط اعضای تیم شما می‌توانند به آن بپیوندند</string>
+  <string name="messageAllMembers">پیام به همه ی اعضا</string>
+  <string name="messageAllMembersOverview">یک پیام خصوصی به هر یک از اعضای تیم ارسال نمایید</string>
+  <string name="messageAllMembersLongDescription">یک پیام خصوصی به تمام اعضای تیم بفرستید.
+شما می‌توانید از این امکان برای فراخوانی بازیکنان برای پیوستن به یک مسابقه یا یک مبارزه تیمی استفاده کنید.
+بازیکنانی که علاقه ندارند پیامهای شما را دریافت کنند ممکن است تیم را ترک کنند.</string>
+  <string name="teamsIlead">تیم هایی که رهبری می کنم</string>
+  <string name="youWayWantToLinkOneOfTheseTournaments">شما می‌خواهید آدرس اینترنتی یکی از مسابقات آتی را قرار دهید؟</string>
+  <string name="usersWhoCanManageThisTeam">کاربرانی که می توانند این تیم را مدیریت کنند</string>
+  <string name="leadersChat">چت رهبران</string>
 </resources>
