--- a/translation/dest/tourname/fa-IR.xml
+++ b/translation/dest/tourname/fa-IR.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="hourlyRapidArena">Hourly Rapid Arena</string>
-  <string name="hourlyRapid">Hourly Rapid</string>
-  <string name="hourlyXArena">Hourly %s Arena</string>
-  <string name="hourlyX">Hourly %s</string>
-  <string name="dailyRapidArena">Daily Rapid Arena</string>
-  <string name="dailyRapid">Daily Rapid</string>
-  <string name="dailyClassicalArena">Daily Classical Arena</string>
-  <string name="dailyClassical">Daily Classical</string>
-  <string name="dailyXArena">Daily %s Arena</string>
-  <string name="dailyX">Daily %s</string>
-  <string name="easternRapidArena">Eastern Rapid Arena</string>
-  <string name="easternRapid">Eastern Rapid</string>
-  <string name="easternClassicalArena">Eastern Classical Arena</string>
-  <string name="easternClassical">Eastern Classical</string>
-  <string name="easternXArena">Eastern %s Arena</string>
-  <string name="easternX">Eastern %s</string>
-  <string name="weeklyRapidArena">Weekly Rapid Arena</string>
-  <string name="weeklyRapid">Weekly Rapid</string>
-  <string name="weeklyClassicalArena">Weekly Classical Arena</string>
-  <string name="weeklyClassical">Weekly Classical</string>
-  <string name="weeklyXArena">Weekly %s Arena</string>
-  <string name="weeklyX">Weekly %s</string>
-  <string name="monthlyRapidArena">Monthly Rapid Arena</string>
-  <string name="monthlyRapid">Monthly Rapid</string>
-  <string name="monthlyClassicalArena">Monthly Classical Arena</string>
-  <string name="monthlyClassical">Monthly Classical</string>
-  <string name="monthlyXArena">Monthly %s Arena</string>
-  <string name="monthlyX">Monthly %s</string>
-  <string name="yearlyRapidArena">Yearly Rapid Arena</string>
-  <string name="yearlyRapid">Yearly Rapid</string>
-  <string name="yearlyClassicalArena">Yearly Classical Arena</string>
-  <string name="yearlyClassical">Yearly Classical</string>
-  <string name="yearlyXArena">Yearly %s Arena</string>
-  <string name="yearlyX">Yearly %s</string>
-  <string name="rapidShieldArena">Rapid Shield Arena</string>
-  <string name="rapidShield">Rapid Shield</string>
-  <string name="classicalShieldArena">Classical Shield Arena</string>
-  <string name="classicalShield">Classical Shield</string>
-  <string name="xShieldArena">%s Shield Arena</string>
-  <string name="xShield">%s Shield</string>
+  <string name="hourlyRapidArena">میدان مسابقه سریع ساعتی</string>
+  <string name="hourlyRapid">سریع ساعتی</string>
+  <string name="hourlyXArena">میدان مسابقه ساعتی با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="hourlyX">محدودیت زمانی ساعتی یا نوع بازی %s</string>
+  <string name="dailyRapidArena">میدان مسابقه سریع روزانه</string>
+  <string name="dailyRapid">سریع روزانه</string>
+  <string name="dailyClassicalArena">میدان مسابقه سنتی روزانه</string>
+  <string name="dailyClassical">سنتی روزانه</string>
+  <string name="dailyXArena">میدان مسابقه روزانه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="dailyX">محدودیت زمانی روزانه یا نوع بازی %s</string>
+  <string name="easternRapidArena">میدان مسابقه سریع شرقی</string>
+  <string name="easternRapid">سریع شرقی</string>
+  <string name="easternClassicalArena">میدان مسابقه سنتی شرقی</string>
+  <string name="easternClassical">سنتی شرقی</string>
+  <string name="easternXArena">میدان مسابقه شرقی با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="easternX">شرقی با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="weeklyRapidArena">میدان مسابقه سریع هفتگی</string>
+  <string name="weeklyRapid">سریع هفتگی</string>
+  <string name="weeklyClassicalArena">میدان مسابقه سنتی هفتگی</string>
+  <string name="weeklyClassical">سنتی هفتگی</string>
+  <string name="weeklyXArena">میدان مسابقه هفتگی با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="weeklyX">هفتگی با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="monthlyRapidArena">میدان مسابقه سریع ماهانه</string>
+  <string name="monthlyRapid">سریع ماهانه</string>
+  <string name="monthlyClassicalArena">میدان مسابقه سنتی ماهانه</string>
+  <string name="monthlyClassical">سنتی ماهانه</string>
+  <string name="monthlyXArena">میدان مسابقه ماهانه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="monthlyX">ماهانه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="yearlyRapidArena">میدان مسابقه سریع سالانه</string>
+  <string name="yearlyRapid">سریع سالانه</string>
+  <string name="yearlyClassicalArena">میدان مسابقه سنتی سالانه</string>
+  <string name="yearlyClassical">سنتی سالانه</string>
+  <string name="yearlyXArena">میدان مسابقه سالانه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="yearlyX">سالانه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="rapidShieldArena">نشان افتخار میدان مسابقه سریع</string>
+  <string name="rapidShield">نشان افتخار مسابقه سریع</string>
+  <string name="classicalShieldArena">نشان افتخار میدان مسابقه سنتی</string>
+  <string name="classicalShield">نشان افتخار مسابقه سنتی</string>
+  <string name="xShieldArena">نشان افتخار میدان مسابقه با محدودیت زمانی یا نوع بازی %s</string>
+  <string name="xShield">نشان افتخار مسابقه با محدودیت زمانی یا نوع بازی %s</string>
   <string name="openingRapidArena">%s Rapid Arena</string>
   <string name="openingRapid">%s Rapid</string>
-  <string name="xTeamBattle">%s Team Battle</string>
-  <string name="eliteXArena">Elite %s Arena</string>
-  <string name="eliteX">Elite %s</string>
-  <string name="xArena">%s Arena</string>
+  <string name="xTeamBattle">مسابقه گروهی %s</string>
+  <string name="eliteXArena">میدان مسابقه نخبگان با محدودیت زمانی %s</string>
+  <string name="eliteX">مسابقه نخبگان با محدودیت زمانی %s</string>
+  <string name="xArena">میدان مسابقه با محدودیت زمانی یا امتیازی %s</string>
 </resources>
